@@ -37,6 +37,7 @@ package com.starrocks.catalog;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.HashBasedTable;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Range;
@@ -51,6 +52,8 @@ import com.starrocks.common.ErrorReport;
 import com.starrocks.common.ThreadPoolManager;
 import com.starrocks.common.io.Writable;
 import com.starrocks.common.util.FrontendDaemon;
+import com.starrocks.memory.MemoryTrackable;
+import com.starrocks.memory.estimate.Estimator;
 import com.starrocks.persist.ImageWriter;
 import com.starrocks.persist.RecoverInfo;
 import com.starrocks.persist.metablock.SRMetaBlockEOFException;
@@ -59,6 +62,7 @@ import com.starrocks.persist.metablock.SRMetaBlockID;
 import com.starrocks.persist.metablock.SRMetaBlockReader;
 import com.starrocks.persist.metablock.SRMetaBlockWriter;
 import com.starrocks.server.GlobalStateMgr;
+import com.starrocks.server.RunMode;
 import com.starrocks.thrift.TStorageMedium;
 import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -82,15 +86,8 @@ import javax.validation.constraints.NotNull;
 import static com.starrocks.server.GlobalStateMgr.isCheckpointThread;
 import static java.lang.Math.max;
 
-public class CatalogRecycleBin extends FrontendDaemon implements Writable {
+public class CatalogRecycleBin extends FrontendDaemon implements Writable, MemoryTrackable {
     private static final Logger LOG = LogManager.getLogger(CatalogRecycleBin.class);
-    // erase meta at least after MIN_ERASE_LATENCY milliseconds
-    // to avoid erase log ahead of drop log
-    private static final long MIN_ERASE_LATENCY = 10L * 60L * 1000L;  // 10 min
-    // Maximum value of a batch of operations for actually delete database(table/partition)
-    // The erase operation will be locked, so one batch can not be too many.
-    private static final int MAX_ERASE_OPERATIONS_PER_CYCLE = 500;
-    private static final long FAIL_RETRY_INTERVAL = 60L * 1000L; // 1 min
 
     private final Map<Long, RecycleDatabaseInfo> idToDatabase;
     // The first Long type is DdId, the second Long is TableId
@@ -98,15 +95,16 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
     // The first Long type is DdId, the second String is TableName
     private final com.google.common.collect.Table<Long, String, RecycleTableInfo> nameToTableInfo;
     private final Map<Long, RecyclePartitionInfo> idToPartition;
+    private final Map<Long, Long> physicalPartitionIdToPartitionId;
 
     private Map<RecyclePartitionInfo, CompletableFuture<Boolean>> asyncDeleteForPartitions;
-    private Map<RecycleTableInfo, CompletableFuture<Boolean>> asyncDeleteForTables;
+
+    // Track the relationship between Lake Table and its partitions for deletion
+    // Key: tableId, Value: Set of partitionIds that belong to this table
+    private final Map<Long, Set<Long>> lakeTableToPartitions;
 
     private static final ExecutorService ASYNC_REMOVE_PARTITION_EXECUTOR = ThreadPoolManager.newDaemonFixedThreadPool(
                 Config.lake_remove_partition_thread_num, Integer.MAX_VALUE, "lake-remove-partition-pool", true);
-
-    private static final ExecutorService ASYNC_REMOVE_TABLE_EXECUTOR = ThreadPoolManager.newDaemonFixedThreadPool(
-                Config.lake_remove_table_thread_num, Integer.MAX_VALUE, "lake-remove-table-pool", true);
 
     protected Map<Long, Long> idToRecycleTime;
 
@@ -119,20 +117,57 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
     protected Set<Long> enableEraseLater;
 
     public CatalogRecycleBin() {
-        super("recycle bin");
+        super("recycle-bin");
         idToDatabase = Maps.newHashMap();
         idToTableInfo = HashBasedTable.create();
         nameToTableInfo = HashBasedTable.create();
         idToPartition = Maps.newHashMap();
+        physicalPartitionIdToPartitionId = Maps.newHashMap();
         idToRecycleTime = Maps.newHashMap();
         enableEraseLater = new HashSet<>();
         asyncDeleteForPartitions = Maps.newHashMap();
-        asyncDeleteForTables = Maps.newHashMap();
+        lakeTableToPartitions = Maps.newHashMap();
     }
 
     private void removeRecycleMarkers(Long id) {
         idToRecycleTime.remove(id);
         enableEraseLater.remove(id);
+    }
+
+    private void addPhysicalPartitionIndex(RecyclePartitionInfo recyclePartitionInfo) {
+        long partitionId = recyclePartitionInfo.getPartition().getId();
+        for (PhysicalPartition physicalPartition : recyclePartitionInfo.getPartition().getSubPartitions()) {
+            physicalPartitionIdToPartitionId.put(physicalPartition.getId(), partitionId);
+        }
+    }
+
+    private void removePhysicalPartitionIndex(@Nullable RecyclePartitionInfo recyclePartitionInfo) {
+        if (recyclePartitionInfo == null) {
+            return;
+        }
+        for (PhysicalPartition physicalPartition : recyclePartitionInfo.getPartition().getSubPartitions()) {
+            physicalPartitionIdToPartitionId.remove(physicalPartition.getId());
+        }
+    }
+
+    private void putPartitionToRecycleBin(RecyclePartitionInfo recyclePartitionInfo) {
+        RecyclePartitionInfo oldPartitionInfo =
+                idToPartition.put(recyclePartitionInfo.getPartition().getId(), recyclePartitionInfo);
+        removePhysicalPartitionIndex(oldPartitionInfo);
+        addPhysicalPartitionIndex(recyclePartitionInfo);
+    }
+
+    @Nullable
+    private RecyclePartitionInfo removePartitionFromRecycleBinInternal(long partitionId) {
+        RecyclePartitionInfo partitionInfo = idToPartition.remove(partitionId);
+        removePhysicalPartitionIndex(partitionInfo);
+        return partitionInfo;
+    }
+
+    private void removePartitionFromRecycleBinInternal(Iterator<Map.Entry<Long, RecyclePartitionInfo>> iterator,
+                                                       RecyclePartitionInfo partitionInfo) {
+        removePhysicalPartitionIndex(partitionInfo);
+        iterator.remove();
     }
 
     public synchronized void recycleDatabase(Database db, Set<String> tableNames, boolean recoverable) {
@@ -229,8 +264,8 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
         disableRecoverPartitionWithSameName(dbId, tableId, partitionName);
 
         idToRecycleTime.put(partitionId, System.currentTimeMillis());
-        idToPartition.put(partitionId, recyclePartitionInfo);
-        LOG.info("Finished put partition '{}' to recycle bin. dbId: {} tableId: {} partitionId: {} recoverable: {}",
+        putPartitionToRecycleBin(recyclePartitionInfo);
+        LOG.debug("Finished put partition '{}' to recycle bin. dbId: {} tableId: {} partitionId: {} recoverable: {}",
                 partitionName, dbId, tableId, partitionId, recyclePartitionInfo.isRecoverable());
     }
 
@@ -243,16 +278,12 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
     }
 
     public synchronized PhysicalPartition getPhysicalPartition(long physicalPartitionId) {
-        for (Partition partition : idToPartition.values().stream()
-                .map(RecyclePartitionInfo::getPartition)
-                .collect(Collectors.toList())) {
-            for (PhysicalPartition subPartition : partition.getSubPartitions()) {
-                if (subPartition.getId() == physicalPartitionId) {
-                    return subPartition;
-                }
-            }
+        Long partitionId = physicalPartitionIdToPartitionId.get(physicalPartitionId);
+        if (partitionId == null) {
+            return null;
         }
-        return null;
+        RecyclePartitionInfo partitionInfo = idToPartition.get(partitionId);
+        return partitionInfo != null ? partitionInfo.getPartition().getSubPartition(physicalPartitionId) : null;
     }
 
     public synchronized short getPartitionReplicationNum(long partitionId) {
@@ -276,14 +307,6 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
         return null;
     }
 
-    public synchronized boolean getPartitionIsInMemory(long partitionId) {
-        RecyclePartitionInfo partitionInfo = idToPartition.get(partitionId);
-        if (partitionInfo != null) {
-            return partitionInfo.isInMemory();
-        }
-        return false;
-    }
-
     public synchronized List<Partition> getPartitions(long tableId) {
         return idToPartition.values().stream()
                 .filter(v -> (v.getTableId() == tableId))
@@ -300,6 +323,9 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
     }
 
     private synchronized boolean checkValidDeletionByClusterSnapshot(long id) {
+        if (RunMode.isSharedNothingMode()) {
+            return true;
+        }
         Long originalRecycleTime = idToRecycleTime.get(id);
         if (originalRecycleTime == null) {
             return true;
@@ -307,22 +333,20 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
         return GlobalStateMgr.getCurrentState().getClusterSnapshotMgr().isDeletionSafeToExecute(originalRecycleTime);
     }
 
-    private synchronized long getAdjustedRecycleTimestamp(long id) {
-        Map<Long, RecycleTableInfo> idToRecycleTableInfo =  Maps.newHashMap();
-        for (Map<Long, RecycleTableInfo> tableEntry : idToTableInfo.rowMap().values()) {
-            for (Map.Entry<Long, RecycleTableInfo> entry : tableEntry.entrySet()) {
-                idToRecycleTableInfo.put(entry.getKey(), entry.getValue());
-            }
-        }
-
-        RecycleTableInfo tableInfo = idToRecycleTableInfo.get(id);
+    private synchronized long getAdjustedRecycleTimestamp(long dbId, long id) {
+        RecycleTableInfo tableInfo = idToTableInfo.row(dbId).get(id);
         if (tableInfo != null && !tableInfo.isRecoverable()) {
             return 0;
         }
 
         RecyclePartitionInfo partitionInfo = idToPartition.get(id);
         if (partitionInfo != null && !partitionInfo.isRecoverable()) {
-            return 0;
+            if (partitionInfo.getRetentionPeriod() > 0) {
+                // partition retention period is set, return the original recycle timestamp
+                return idToRecycleTime.get(id);
+            } else {
+                return 0;
+            }
         }
 
         RecycleDatabaseInfo databaseInfo = idToDatabase.get(id);
@@ -337,9 +361,19 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
      * if we can erase this instance, we should check if anyone enable erase later.
      * Only used by main loop.
      */
-    private synchronized boolean timeExpired(long id, long currentTimeMs) {
-        long latencyMs = currentTimeMs - getAdjustedRecycleTimestamp(id);
-        long expireMs = max(Config.catalog_trash_expire_second * 1000L, MIN_ERASE_LATENCY);
+    private synchronized boolean timeExpired(long dbId, long id, long currentTimeMs) {
+        long latencyMs = currentTimeMs - getAdjustedRecycleTimestamp(dbId, id);
+        long expireMs = max(Config.catalog_trash_expire_second * 1000L, Config.catalog_recycle_bin_erase_min_latency_ms);
+        // customize expireMs for partition that need to be retained for a configurable period
+        if (idToPartition.containsKey(id)) {
+            RecyclePartitionInfo recyclePartitionInfo = idToPartition.get(id);
+            if (recyclePartitionInfo.getRetentionPeriod() > 0) {
+                // retain the partition alive for `tabletReservePeriod` seconds
+                // while retention period is set, `catalog_trash_expire_second` will not take effect and the partition
+                // is assumed to have been set un-recoverable (i.e. partition is not recoverable)
+                expireMs = max(recyclePartitionInfo.getRetentionPeriod() * 1000, Config.catalog_recycle_bin_erase_min_latency_ms);
+            }
+        }
         if (enableEraseLater.contains(id)) {
             // if enableEraseLater is set, extend the timeout by LATE_RECYCLE_INTERVAL_SECONDS
             expireMs += LATE_RECYCLE_INTERVAL_SECONDS * 1000L;
@@ -348,7 +382,7 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
     }
 
     private synchronized boolean canEraseDatabase(RecycleDatabaseInfo databaseInfo, long currentTimeMs) {
-        if (GlobalStateMgr.getCurrentState().getClusterSnapshotMgr()
+        if (RunMode.isSharedDataMode() && GlobalStateMgr.getCurrentState().getClusterSnapshotMgr()
                             .isDbInClusterSnapshotInfo(databaseInfo.getDb().getId())) {
             return false;
         }
@@ -356,7 +390,7 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
             return false;
         }
 
-        if (timeExpired(databaseInfo.getDb().getId(), currentTimeMs)) {
+        if (timeExpired(databaseInfo.getDb().getId(), databaseInfo.getDb().getId(), currentTimeMs)) {
             return true;
         }
 
@@ -364,7 +398,7 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
     }
 
     private synchronized boolean canEraseTable(RecycleTableInfo tableInfo, long currentTimeMs) {
-        if (GlobalStateMgr.getCurrentState().getClusterSnapshotMgr()
+        if (RunMode.isSharedDataMode() && GlobalStateMgr.getCurrentState().getClusterSnapshotMgr()
                             .isTableInClusterSnapshotInfo(tableInfo.getDbId(), tableInfo.getTable().getId())) {
             return false;
         }
@@ -373,7 +407,7 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
             return false;
         }
 
-        if (timeExpired(tableInfo.getTable().getId(), currentTimeMs)) {
+        if (timeExpired(tableInfo.getDbId(), tableInfo.getTable().getId(), currentTimeMs)) {
             return true;
         }
 
@@ -385,7 +419,7 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
     }
 
     private synchronized boolean canErasePartition(RecyclePartitionInfo partitionInfo, long currentTimeMs) {
-        if (GlobalStateMgr.getCurrentState().getClusterSnapshotMgr()
+        if (RunMode.isSharedDataMode() && GlobalStateMgr.getCurrentState().getClusterSnapshotMgr()
                             .isPartitionInClusterSnapshotInfo(partitionInfo.getDbId(),
                                     partitionInfo.getTableId(), partitionInfo.getPartition().getId())) {
             return false;
@@ -395,7 +429,7 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
             return false;
         }
 
-        if (timeExpired(partitionInfo.getPartition().getId(), currentTimeMs)) {
+        if (timeExpired(partitionInfo.getDbId(), partitionInfo.getPartition().getId(), currentTimeMs)) {
             return true;
         }
 
@@ -417,13 +451,13 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
     /**
      * make sure there are still some time before the subject is erased
      */
-    public synchronized boolean ensureEraseLater(long id, long currentTimeMs) {
+    public synchronized boolean ensureEraseLater(long dbId, long id, long currentTimeMs) {
         // 1. not in idToRecycleTime, maybe already erased, sorry it's too late!
         if (!idToRecycleTime.containsKey(id)) {
             return false;
         }
         // 2. will expire after quite a long time, don't worry
-        long latency = currentTimeMs - getAdjustedRecycleTimestamp(id);
+        long latency = currentTimeMs - getAdjustedRecycleTimestamp(dbId, id);
         if (latency < (Config.catalog_trash_expire_second - LATE_RECYCLE_INTERVAL_SECONDS) * 1000L) {
             return true;
         }
@@ -449,15 +483,15 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
             // db erase should be control by cluster snapshot backup if it is avaliable
             // to prevent the incorrect deletion by the StarMgrMetaSyncer
             if (canEraseDatabase(dbInfo, currentTimeMs)) {
-                // erase db
-                dbIter.remove();
-                removeRecycleMarkers(entry.getKey());
-
-                GlobalStateMgr.getCurrentState().getLocalMetastore().onEraseDatabase(db.getId());
-                GlobalStateMgr.getCurrentState().getEditLog().logEraseDb(db.getId());
+                GlobalStateMgr.getCurrentState().getEditLog().logEraseDb(db.getId(), wal -> {
+                    // erase db
+                    dbIter.remove();
+                    removeRecycleMarkers(entry.getKey());
+                    GlobalStateMgr.getCurrentState().getLocalMetastore().onEraseDatabase(db.getId());
+                });
                 LOG.info("erase db[{}-{}] finished", db.getId(), db.getOriginName());
                 currentEraseOpCnt++;
-                if (currentEraseOpCnt >= MAX_ERASE_OPERATIONS_PER_CYCLE) {
+                if (currentEraseOpCnt >= Config.catalog_recycle_bin_erase_max_operations_per_cycle) {
                     break;
                 }
             }
@@ -503,23 +537,30 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
                 } else {
                     l2.add(tableInfo);
                 }
-                if (l1.size()  + l2.size() >= MAX_ERASE_OPERATIONS_PER_CYCLE) {
+                if (l1.size()  + l2.size() >= Config.catalog_recycle_bin_erase_max_operations_per_cycle) {
                     break outerLoop;
                 }
             }
         }
         if (!l1.isEmpty()) {
-            List<Long> tableIds = l1.stream()
+            List<RecycleTableInfo> tableInfos = l1.stream()
                     .filter(RecycleTableInfo::isRecoverable)
-                    .peek(i -> i.setRecoverable(false))
-                    .map(i -> i.getTable().getId())
-                    .collect(Collectors.toList());
-            logDisableTableRecovery(tableIds);
+                    .toList();
+            if (!tableInfos.isEmpty()) {
+                List<Long> tableIds = tableInfos.stream()
+                        .map(info -> info.getTable().getId())
+                        .collect(Collectors.toList());
+                GlobalStateMgr.getCurrentState().getEditLog().logDisableTableRecovery(tableIds, wal -> {
+                    for (RecycleTableInfo info : tableInfos) {
+                        info.setRecoverable(false);
+                    }
+                });
+                LOG.info("Finished log disable table recovery of tables: {}", StringUtils.join(tableIds, ","));
+            }
         }
         if (!l2.isEmpty()) {
             List<Long> tableIds = l2.stream().map(i -> i.getTable().getId()).collect(Collectors.toList());
-            removeTableFromRecycleBin(tableIds);
-            logEraseTables(tableIds);
+            logAddApplyEraseTables(tableIds);
         }
         return ListUtils.union(l1, l2);
     }
@@ -540,23 +581,17 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
         }
     }
 
-    static void logDisableTableRecovery(List<Long> tableIds) {
+    void logAddApplyEraseTables(List<Long> tableIds) {
         if (tableIds.isEmpty()) {
             return;
         }
-        GlobalStateMgr.getCurrentState().getEditLog().logDisableTableRecovery(tableIds);
-        LOG.info("Finished log disable table recovery of tables: {}", StringUtils.join(tableIds, ","));
-    }
-
-    static void logEraseTables(List<Long> tableIds) {
-        if (tableIds.isEmpty()) {
-            return;
-        }
-        GlobalStateMgr.getCurrentState().getEditLog().logEraseMultiTables(tableIds);
+        GlobalStateMgr.getCurrentState().getEditLog().logEraseMultiTables(tableIds, wal -> {
+            removeTableFromRecycleBin(tableIds);
+        });
         LOG.info("Finished log erase tables: {}", StringUtils.join(tableIds, ","));
     }
 
-    private List<RecycleTableInfo> removeTableFromRecycleBin(List<Long> tableIds) {
+    synchronized List<RecycleTableInfo> removeTableFromRecycleBin(List<Long> tableIds) {
         List<RecycleTableInfo> removedTableInfos = Lists.newArrayListWithCapacity(tableIds.size());
         for (Long tableId : tableIds) {
             Map<Long, RecycleTableInfo> column = idToTableInfo.column(tableId);
@@ -570,19 +605,139 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
                 removedTableInfos.add(tableInfo);
                 nameToTableInfo.remove(dbId, tableInfo.table.getName());
             }
-            idToRecycleTime.remove(tableId);
-            enableEraseLater.remove(tableId);
+            removeRecycleMarkers(tableId);
+            // Clean up any table-deletion partitions that were converted from this table.
+            // We derive the partition list from the table object itself rather than relying
+            // solely on the in-memory lakeTableToPartitions map, because lakeTableToPartitions
+            // is not persisted in checkpoint images. A FE that loads a checkpoint taken during
+            // the partition conversion window would have these partitions in idToPartition but
+            // no lakeTableToPartitions entry, leading to orphaned partition entries on replay.
+            lakeTableToPartitions.remove(tableId);
+            if (tableInfo != null && tableInfo.getTable() instanceof OlapTable) {
+                OlapTable olapTable = (OlapTable) tableInfo.getTable();
+                if (olapTable.isCloudNativeTableOrMaterializedView()) {
+                    for (Partition partition : olapTable.getAllPartitions()) {
+                        long partitionId = partition.getId();
+                        RecyclePartitionInfo partitionInfo = removePartitionFromRecycleBinInternal(partitionId);
+                        if (partitionInfo != null) {
+                            asyncDeleteForPartitions.remove(partitionInfo);
+                        }
+                        removeRecycleMarkers(partitionId);
+                    }
+                }
+            }
         }
         return removedTableInfos;
     }
 
     private synchronized void setNextEraseMinTime(long id, long eraseTime) {
-        long expireTime = max(Config.catalog_trash_expire_second * 1000L, MIN_ERASE_LATENCY);
+        long expireTime = max(Config.catalog_trash_expire_second * 1000L, Config.catalog_recycle_bin_erase_min_latency_ms);
         idToRecycleTime.replace(id, eraseTime - expireTime);
     }
 
+    /**
+     * Add Lake Table's partitions to idToPartition for deletion by erasePartition().
+     * This converts table deletion to partition-level deletion, reusing the same deletion logic.
+     *
+     * @param tableInfo the table info to process
+     * @return true if partitions were added, false if table has no partitions
+     */
+    private boolean addLakeTablePartitionsToRecycleBin(RecycleTableInfo tableInfo) {
+        OlapTable table = (OlapTable) tableInfo.getTable();
+        long dbId = tableInfo.getDbId();
+        long tableId = table.getId();
+
+        // Remove table bindings (storage volume, etc.) at the start of deletion process.
+        // This is consistent with the original LakeTableHelper.deleteTableFromRecycleBin behavior.
+        // Note: removeTableBinds() is idempotent, so it's safe to call again after FE restart.
+        table.removeTableBinds(false);
+
+        // Inherit the table's recycle time for partitions to preserve ClusterSnapshot safety checks.
+        // Using the table's original recycle time ensures that if a new cluster snapshot is created
+        // between the table-level check and the partition-level deletion, the partition deletion
+        // will be correctly blocked by checkValidDeletionByClusterSnapshot().
+        // Since this method is only called after canEraseTable() confirms the table has expired,
+        // the partitions will also pass the timeExpired() check with the table's recycle time.
+        Long tableRecycleTime = idToRecycleTime.get(tableId);
+        long partitionRecycleTime = (tableRecycleTime != null) ? tableRecycleTime : 0L;
+
+        Set<Long> partitionIds = Sets.newHashSet();
+        for (Partition partition : table.getAllPartitions()) {
+            long partitionId = partition.getId();
+
+            // After FE restart, lakeTableToPartitions is lost (in-memory only), so this method
+            // may be called again for the same table. Skip partitions that are already in the
+            // recycle bin (from a previous run before restart or checkpoint recovery) to ensure
+            // idempotency and avoid resetting their async deletion state.
+            if (idToPartition.containsKey(partitionId)) {
+                partitionIds.add(partitionId);
+                continue;
+            }
+
+            // Reuse the table's buildRecyclePartitionInfo to avoid code duplication
+            RecyclePartitionInfo recyclePartitionInfo = table.buildRecyclePartitionInfo(dbId, partition);
+            // Mark as not recoverable since the table is being erased
+            recyclePartitionInfo.setRecoverable(false);
+            // Mark this partition as coming from table deletion (also forces directory removal)
+            recyclePartitionInfo.setFromTableDeletion(true);
+
+            // Add via helper to keep recycle-bin indexes (physicalPartitionIdToPartitionId) consistent
+            putPartitionToRecycleBin(recyclePartitionInfo);
+            // Use the table's recycle time to maintain consistency with ClusterSnapshot safety checks
+            idToRecycleTime.put(partitionId, partitionRecycleTime);
+            partitionIds.add(partitionId);
+        }
+
+        if (partitionIds.isEmpty()) {
+            return false;
+        }
+
+        // Track the relationship between table and partitions
+        lakeTableToPartitions.put(tableId, partitionIds);
+        LOG.debug("Added {} partitions from Lake table '{}' (tableId: {}) to recycle bin for deletion",
+                partitionIds.size(), table.getName(), tableId);
+        return true;
+    }
+
+    /**
+     * Check if all partitions of a Lake Table have been deleted.
+     *
+     * @param tableId the table id to check
+     * @return true if all partitions are deleted, false otherwise
+     */
+    private boolean areLakeTablePartitionsDeleted(long tableId) {
+        Set<Long> partitionIds = lakeTableToPartitions.get(tableId);
+        if (partitionIds == null || partitionIds.isEmpty()) {
+            return true;
+        }
+        // Check if any partition is still in idToPartition
+        for (Long partitionId : partitionIds) {
+            if (idToPartition.containsKey(partitionId)) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    /**
+     * Clean up Lake Table resources after all its partitions have been deleted.
+     *
+     * @param info the table info to clean up
+     */
+    private void cleanupLakeTableAfterPartitionsDeletion(RecycleTableInfo info) {
+        long tableId = info.getTable().getId();
+        lakeTableToPartitions.remove(tableId);
+        // Clean up table-level resources.
+        // Note: removeTableBinds() was already called in addLakeTablePartitionsToRecycleBin().
+        OlapTable table = (OlapTable) info.getTable();
+        table.removeTabletsFromInvertedIndex();
+        GlobalStateMgr.getCurrentState().getWarehouseMgr().removeTableWarehouseInfo(tableId);
+        LOG.debug("All partitions of Lake table '{}' (tableId: {}) have been deleted, cleaned up table resources",
+                table.getName(), tableId);
+    }
+
     @VisibleForTesting
-    void eraseTable(long currentTimeMs) {
+    synchronized void eraseTable(long currentTimeMs) {
         List<RecycleTableInfo> tableToErase = pickTablesToErase(currentTimeMs);
         if (tableToErase.isEmpty()) {
             return;
@@ -590,43 +745,41 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
 
         List<Long> finishedTables = Lists.newArrayList();
         for (RecycleTableInfo info : tableToErase) {
-            boolean finished = false;
-            CompletableFuture<Boolean> future = asyncDeleteForTables.get(info);
-            if (future == null) {
-                asyncDeleteForTables.put(info, CompletableFuture.supplyAsync(() -> {
-                    return info.table.deleteFromRecycleBin(info.dbId, false);
-                }, ASYNC_REMOVE_TABLE_EXECUTOR));
-            } else if (future.isDone()) {
-                try {
-                    finished = future.get();
-                } catch (Exception e) {
-                    finished = false;
-                    LOG.warn("erase table failed in Recycle Bin, DB id: {}, table name: {}, error message: {}",
-                             info.getDbId(), info.getTable().getName(), e.getMessage());
-                }
-
-                if (!finished) {
-                    // finish with error, re-submit in next round
-                    asyncDeleteForTables.remove(info);
-                }
-            }
-
+            // For non-retry-able tables (such as tables in shared-nothing mode), skip async deletion to prevent memory leak
             if (!info.table.isDeleteRetryable()) {
-                // Nothing to do
+                // These tables are already removed from idToTableInfo in pickTablesToErase,
+                // So directly call deleteFromRecycleBin synchronously
+                info.table.deleteFromRecycleBin(info.dbId, false);
                 continue;
             }
-            Preconditions.checkState(!info.isRecoverable());
-            if (finished) {
-                finishedTables.add(info.table.getId());
-                asyncDeleteForTables.remove(info);
-            } else if (asyncDeleteForTables.get(info) == null) {
-                // treated as error if task is not running
-                setNextEraseMinTime(info.table.getId(), System.currentTimeMillis() + FAIL_RETRY_INTERVAL);
+
+            // Use async deletion with tracking for lake(cloud-native) tables
+            Preconditions.checkState(!info.isRecoverable() && info.table.isCloudNativeTableOrMaterializedView());
+            long tableId = info.table.getId();
+
+            // For lake table, we will convert it to partition-level deletion
+            // First, we should check if all of table's partitions have already been added to idToPartition
+            if (!lakeTableToPartitions.containsKey(tableId)) {
+                // First time processing this table, add its partitions to idToPartition
+                if (!addLakeTablePartitionsToRecycleBin(info)) {
+                    // No partitions, table is ready to be erased
+                    cleanupLakeTableAfterPartitionsDeletion(info);
+                    finishedTables.add(tableId);
+                    continue;
+                }
+                // Partitions added, will be processed by erasePartition() in next cycle
+                continue;
             }
+
+            // Check if all partitions have been deleted by erasePartition()
+            if (areLakeTablePartitionsDeleted(tableId)) {
+                cleanupLakeTableAfterPartitionsDeletion(info);
+                finishedTables.add(tableId);
+            }
+            // If partitions are still being deleted, do nothing and wait for next cycle
         }
 
-        removeTableFromRecycleBin(finishedTables);
-        logEraseTables(finishedTables);
+        logAddApplyEraseTables(finishedTables);
     }
 
     public synchronized void replayDisablePartitionRecovery(long partitionId) {
@@ -663,9 +816,8 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
             boolean finished = false;
             CompletableFuture<Boolean> future = asyncDeleteForPartitions.get(partitionInfo);
             if (future == null) {
-                asyncDeleteForPartitions.put(partitionInfo, CompletableFuture.supplyAsync(() -> {
-                    return partitionInfo.delete();
-                }, ASYNC_REMOVE_PARTITION_EXECUTOR));
+                asyncDeleteForPartitions.put(partitionInfo,
+                        CompletableFuture.supplyAsync(partitionInfo::delete, ASYNC_REMOVE_PARTITION_EXECUTOR));
             } else if (future.isDone()) {
                 try {
                     finished = future.get();
@@ -683,26 +835,57 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
             }
 
             if (finished) {
-                iterator.remove();
-                asyncDeleteForPartitions.remove(partitionInfo);
-                removeRecycleMarkers(partitionId);
+                // Check if this partition comes from table deletion
+                if (partitionInfo.isFromTableDeletion()) {
+                    // Partition from table deletion: don't log individual partition erase
+                    // The table's edit log will be recorded when all partitions are deleted
+                    removePartitionFromRecycleBinInternal(iterator, partitionInfo);
+                    asyncDeleteForPartitions.remove(partitionInfo);
+                    removeRecycleMarkers(partitionId);
+                    LOG.info("Removed partition '{}' related to table deletion from recycle bin."
+                                    + " dbId: {} tableId: {} partitionId: {}",
+                            partition.getName(), partitionInfo.getDbId(), partitionInfo.getTableId(), partitionId);
+                } else {
+                    // Normal partition deletion: log individual partition erase
+                    GlobalStateMgr.getCurrentState().getEditLog().logErasePartition(partitionId, wal -> {
+                        removePartitionFromRecycleBinInternal(iterator, partitionInfo);
+                        asyncDeleteForPartitions.remove(partitionInfo);
+                        removeRecycleMarkers(partitionId);
+                    });
+                    LOG.info("Removed partition '{}' from recycle bin. dbId: {} tableId: {} partitionId: {}",
+                            partition.getName(), partitionInfo.getDbId(), partitionInfo.getTableId(), partitionId);
+                }
 
-                GlobalStateMgr.getCurrentState().getEditLog().logErasePartition(partitionId);
-
-                LOG.info("Removed partition '{}' from recycle bin. dbId: {} tableId: {} partitionId: {}",
-                        partition.getName(), partitionInfo.getDbId(), partitionInfo.getTableId(), partitionId);
                 currentEraseOpCnt++;
-                if (currentEraseOpCnt >= MAX_ERASE_OPERATIONS_PER_CYCLE) {
+                if (currentEraseOpCnt >= Config.catalog_recycle_bin_erase_max_operations_per_cycle) {
                     break;
                 }
             } else if (asyncDeleteForPartitions.get(partitionInfo) == null) {
-                // treated as error if task is not running
+                // Task failed, schedule retry
                 Preconditions.checkState(!partitionInfo.isRecoverable());
-                setNextEraseMinTime(partitionId, System.currentTimeMillis() + FAIL_RETRY_INTERVAL);
+                setNextEraseMinTime(
+                        partitionId, System.currentTimeMillis() +
+                            Config.catalog_recycle_bin_erase_fail_retry_interval_ms);
             }
         } // end for partitions
     }
 
+    /**
+     * Marks all existing same-name partitions (matching {@code dbId}, {@code tableId}, and
+     * {@code partitionName}) as non-recoverable when a new partition with the same name is
+     * recycled.
+     *
+     * <p>Two invariants are maintained:
+     * <ol>
+     *   <li><b>All matches are processed</b> — every existing same-name partition is visited so
+     *       that none remains recoverable (there is intentionally no early-exit {@code break}).
+     *   <li><b>Retention clock is never reset for already-non-recoverable partitions</b> — only
+     *       transitions from recoverable→non-recoverable update {@code idToRecycleTime}.
+     *       Skipping non-recoverable partitions preserves their original retention deadline,
+     *       preventing them from becoming permanently stuck in the recycle bin when a
+     *       same-name partition is added within the retention window.
+     * </ol>
+     */
     private synchronized void disableRecoverPartitionWithSameName(long dbId, long tableId, String partitionName) {
         for (Map.Entry<Long, RecyclePartitionInfo> entry : idToPartition.entrySet()) {
             RecyclePartitionInfo partitionInfo = entry.getValue();
@@ -710,14 +893,15 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
                     !partitionInfo.getPartition().getName().equalsIgnoreCase(partitionName)) {
                 continue;
             }
-            partitionInfo.setRecoverable(false);
-            idToRecycleTime.replace(partitionInfo.getPartition().getId(), System.currentTimeMillis());
-            break;
+            if (partitionInfo.isRecoverable()) {
+                partitionInfo.setRecoverable(false);
+                idToRecycleTime.replace(partitionInfo.getPartition().getId(), System.currentTimeMillis());
+            }
         }
     }
 
     public synchronized void replayErasePartition(long partitionId) {
-        RecyclePartitionInfo partitionInfo = idToPartition.remove(partitionId);
+        RecyclePartitionInfo partitionInfo = removePartitionFromRecycleBinInternal(partitionId);
         idToRecycleTime.remove(partitionId);
 
         Partition partition = partitionInfo.getPartition();
@@ -817,14 +1001,15 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
         }
 
         Table table = recycleTableInfo.getTable();
-        db.registerTableUnlocked(table);
-        nameToTableInfoDbLevel.remove(tableName);
-        idToTableInfo.row(dbId).remove(table.getId());
-        removeRecycleMarkers(table.getId());
 
         // log
         RecoverInfo recoverInfo = new RecoverInfo(dbId, table.getId(), -1L);
-        GlobalStateMgr.getCurrentState().getEditLog().logRecoverTable(recoverInfo);
+        GlobalStateMgr.getCurrentState().getEditLog().logRecoverTable(recoverInfo, wal -> {
+            db.registerTableUnlocked(table);
+            nameToTableInfoDbLevel.remove(tableName);
+            idToTableInfo.row(dbId).remove(table.getId());
+            removeRecycleMarkers(table.getId());
+        });
         LOG.info("recover db[{}] with table[{}]: {}", dbId, table.getId(), table.getName());
         return true;
     }
@@ -872,17 +1057,19 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
                     partitionName, table.getName()));
         }
 
-        recoverPartitionInfo.recover(table);
+        // check recoverable
+        recoverPartitionInfo.checkRecoverable(table);
 
         long partitionId = recoverPartitionInfo.getPartition().getId();
-
-        // remove from recycle bin
-        idToPartition.remove(partitionId);
-        removeRecycleMarkers(partitionId);
-
         // log
         RecoverInfo recoverInfo = new RecoverInfo(dbId, table.getId(), partitionId);
-        GlobalStateMgr.getCurrentState().getEditLog().logRecoverPartition(recoverInfo);
+        final RecyclePartitionInfo finalRecoverPartitionInfo = recoverPartitionInfo;
+        GlobalStateMgr.getCurrentState().getEditLog().logRecoverPartition(recoverInfo, wal -> {
+            finalRecoverPartitionInfo.recover(table);
+            // remove from recycle bin
+            removePartitionFromRecycleBinInternal(partitionId);
+            removeRecycleMarkers(partitionId);
+        });
         LOG.info("Recovered partition '{}' of table '{}'. dbId={} tableId={} partitionId={}", partitionName,
                 table.getName(), dbId, table.getId(), partitionId);
     }
@@ -904,14 +1091,19 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
             rangePartitionInfo.setRange(partitionId, false, partitionInfo.getRange());
             rangePartitionInfo.setDataProperty(partitionId, partitionInfo.getDataProperty());
             rangePartitionInfo.setReplicationNum(partitionId, partitionInfo.getReplicationNum());
-            rangePartitionInfo.setIsInMemory(partitionId, partitionInfo.isInMemory());
 
             if (table.isCloudNativeTable()) {
                 rangePartitionInfo.setDataCacheInfo(partitionId,
                         ((RecyclePartitionInfoV2) partitionInfo).getDataCacheInfo());
             }
 
-            iterator.remove();
+            // Corner case: The user may have dropped the partition (non-force), then changed
+            // the table's datacache.enable property while the partition was in the recycle bin.
+            // When the partition is recovered (including replay), its DataCacheInfo should be
+            // updated to match the table's current datacache.enable value.
+            partitionInfo.syncDataCacheInfoWithTable(table, rangePartitionInfo, partitionId);
+
+            removePartitionFromRecycleBinInternal(iterator, partitionInfo);
             idToRecycleTime.remove(partitionId);
 
             LOG.info("replay recover partition[{}-{}] finished", partitionId, partitionInfo.getPartition().getName());
@@ -945,9 +1137,8 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
                 TStorageMedium medium = dataProperty.getStorageMedium();
                 for (PhysicalPartition physicalPartition : partition.getSubPartitions()) {
                     long physicalPartitionId = physicalPartition.getId();
-                    for (MaterializedIndex index : physicalPartition.getMaterializedIndices(IndexExtState.ALL)) {
+                    for (MaterializedIndex index : physicalPartition.getAllMaterializedIndices(IndexExtState.ALL)) {
                         long indexId = index.getId();
-                        int schemaHash = olapTable.getSchemaHashByIndexId(indexId);
                         TabletMeta tabletMeta = new TabletMeta(dbId, tableId, physicalPartitionId, indexId, medium,
                                 table.isCloudNativeTable());
                         for (Tablet tablet : index.getTablets()) {
@@ -1003,9 +1194,8 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
             TStorageMedium medium = partitionInfo.getDataProperty().getStorageMedium();
             for (PhysicalPartition physicalPartition : partition.getSubPartitions()) {
                 long physicalPartitionId = physicalPartition.getId();
-                for (MaterializedIndex index : physicalPartition.getMaterializedIndices(IndexExtState.ALL)) {
+                for (MaterializedIndex index : physicalPartition.getAllMaterializedIndices(IndexExtState.ALL)) {
                     long indexId = index.getId();
-                    int schemaHash = olapTable.getSchemaHashByIndexId(indexId);
                     TabletMeta tabletMeta = new TabletMeta(dbId, tableId, physicalPartitionId, indexId, medium,
                             olapTable.isCloudNativeTable());
                     for (Tablet tablet : index.getTablets()) {
@@ -1030,8 +1220,12 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
     @Override
     protected void runAfterCatalogReady() {
         long currentTimeMs = System.currentTimeMillis();
-        // should follow the partition/table/db order
-        // in case of partition(table) is still in recycle bin but table(db) is missing
+        // Must follow the partition -> table -> db order for two reasons:
+        // 1. Avoid dangling references: partition(table) should be erased before its parent table(db).
+        // 2. Lake table deletion flow: eraseTable() converts table deletion into partition-level
+        //    deletions (adding partitions to idToPartition), and erasePartition() processes them.
+        //    On the next daemon cycle, erasePartition() runs first to delete the partitions,
+        //    then eraseTable() checks completion and finalizes the table cleanup.
         try {
             erasePartition(currentTimeMs);
             // synchronized is unfair lock, sleep here allows other high-priority operations to obtain a lock
@@ -1159,13 +1353,53 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
     }
 
     @VisibleForTesting
-    synchronized boolean isDeletingTable(long id) {
-        RecycleTableInfo info = getRecycleTableInfo(id);
-        return info != null && asyncDeleteForTables.get(info) != null;
+    synchronized boolean isLakeTableDeletingInProgress(long tableId) {
+        return lakeTableToPartitions.containsKey(tableId);
     }
 
+    @VisibleForTesting
+    synchronized int getLakeTablePendingPartitionCount(long tableId) {
+        Set<Long> partitionIds = lakeTableToPartitions.get(tableId);
+        if (partitionIds == null) {
+            return 0;
+        }
+        // Count partitions that are still in idToPartition (not yet deleted)
+        int count = 0;
+        for (Long partitionId : partitionIds) {
+            if (idToPartition.containsKey(partitionId)) {
+                count++;
+            }
+        }
+        return count;
+    }
 
+    @VisibleForTesting
+    synchronized boolean isPartitionFromTableDeletion(long partitionId) {
+        RecyclePartitionInfo info = idToPartition.get(partitionId);
+        return info != null && info.isFromTableDeletion();
+    }
 
+    /**
+     * Check if any partition of a Lake Table is currently being deleted asynchronously.
+     * This is useful for tests to wait for the current round of deletion attempts to complete.
+     *
+     * @param tableId the table id to check
+     * @return true if any partition has an active async delete task, false otherwise
+     */
+    @VisibleForTesting
+    synchronized boolean isAnyLakeTablePartitionDeleting(long tableId) {
+        Set<Long> partitionIds = lakeTableToPartitions.get(tableId);
+        if (partitionIds == null) {
+            return false;
+        }
+        for (Long partitionId : partitionIds) {
+            RecyclePartitionInfo info = idToPartition.get(partitionId);
+            if (info != null && asyncDeleteForPartitions.get(info) != null) {
+                return true;
+            }
+        }
+        return false;
+    }
 
     public static class RecycleDatabaseInfo implements Writable {
         @SerializedName("d")
@@ -1273,7 +1507,7 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
                         recyclePartitionInfoV1.dbId, recyclePartitionInfoV1.tableId, recyclePartitionInfoV1.partition,
                         recyclePartitionInfoV1.range, recyclePartitionInfoV1.dataProperty,
                         recyclePartitionInfoV1.replicationNum,
-                        recyclePartitionInfoV1.isInMemory, null);
+                        null);
                 writer.writeJson(recycleRangePartitionInfo);
             } else {
                 writer.writeJson(recyclePartitionInfo);
@@ -1286,6 +1520,7 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
     }
 
     public void load(SRMetaBlockReader reader) throws IOException, SRMetaBlockException, SRMetaBlockEOFException {
+        physicalPartitionIdToPartitionId.clear();
         reader.readCollection(RecycleDatabaseInfo.class, recycleDatabaseInfo -> {
             idToDatabase.put(recycleDatabaseInfo.db.getId(), recycleDatabaseInfo);
         });
@@ -1296,7 +1531,7 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
         });
 
         reader.readCollection(RecyclePartitionInfoV2.class, recyclePartitionInfo -> {
-            idToPartition.put(recyclePartitionInfo.partition.getId(), recyclePartitionInfo);
+            putPartitionToRecycleBin(recyclePartitionInfo);
         });
 
         idToRecycleTime = (Map<Long, Long>) reader.readJson(new TypeToken<Map<Long, Long>>() {
@@ -1319,14 +1554,65 @@ public class CatalogRecycleBin extends FrontendDaemon implements Writable {
     }
 
     public static long getFailRetryInterval() {
-        return FAIL_RETRY_INTERVAL;
+        return Config.catalog_recycle_bin_erase_fail_retry_interval_ms;
     }
 
     public static long getMaxEraseOperationsPerCycle() {
-        return MAX_ERASE_OPERATIONS_PER_CYCLE;
+        return Config.catalog_recycle_bin_erase_max_operations_per_cycle;
     }
 
     public static long getMinEraseLatency() {
-        return MIN_ERASE_LATENCY;
+        return Config.catalog_recycle_bin_erase_min_latency_ms;
+    }
+
+    // for test
+    protected void clear() {
+        idToDatabase.clear();
+        idToTableInfo.clear();
+        nameToTableInfo.clear();
+        idToPartition.clear();
+        physicalPartitionIdToPartitionId.clear();
+        idToRecycleTime.clear();
+        enableEraseLater.clear();
+        asyncDeleteForPartitions.clear();
+        lakeTableToPartitions.clear();
+    }
+
+    // for test
+    protected void setPartitionInfo(long partitionId, RecyclePartitionInfo partitionInfo) {
+        Preconditions.checkState(partitionId == partitionInfo.getPartition().getId());
+        putPartitionToRecycleBin(partitionInfo);
+    }
+
+    // for test
+    protected void setDeleteFutureForPartition(RecyclePartitionInfo partitionInfo, CompletableFuture<Boolean> future) {
+        asyncDeleteForPartitions.put(partitionInfo, future);
+    }
+
+    // for test
+    public void removePartitionFromRecycleBin(long partitionId) {
+        removePartitionFromRecycleBinInternal(partitionId);
+        idToRecycleTime.remove(partitionId);
+        enableEraseLater.remove(partitionId);
+    }
+
+    @Override
+    public synchronized Map<String, Long> estimateCount() {
+        return ImmutableMap.<String, Long>builder()
+                .put("Database", (long) idToDatabase.size())
+                .put("Table", (long) idToTableInfo.size())
+                .put("Partition", (long) idToPartition.size())
+                .put("PhysicalPartitionIndex", (long) physicalPartitionIdToPartitionId.size())
+                .put("AsyncDeletePartition", (long) asyncDeleteForPartitions.size())
+                .build();
+    }
+
+    @Override
+    public synchronized long estimateSize() {
+        return Estimator.estimate(idToDatabase, 20) +
+                Estimator.estimate(idToTableInfo.rowMap(), 20) +
+                Estimator.estimate(idToPartition, 20) +
+                Estimator.estimate(physicalPartitionIdToPartitionId, 20) +
+                Estimator.estimate(idToRecycleTime, 20);
     }
 }
