@@ -19,7 +19,7 @@ import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
-import com.starrocks.catalog.ArrayType;
+import com.starrocks.catalog.AggregateFunction;
 import com.starrocks.catalog.Column;
 import com.starrocks.catalog.ColumnAccessPath;
 import com.starrocks.catalog.FunctionSet;
@@ -28,9 +28,9 @@ import com.starrocks.catalog.IcebergTable;
 import com.starrocks.catalog.OlapTable;
 import com.starrocks.catalog.PhysicalPartition;
 import com.starrocks.catalog.Table;
-import com.starrocks.catalog.Type;
 import com.starrocks.common.FeConstants;
 import com.starrocks.common.Pair;
+import com.starrocks.common.util.UnionFind;
 import com.starrocks.connector.hive.HiveStorageFormat;
 import com.starrocks.qe.SessionVariable;
 import com.starrocks.server.GlobalStateMgr;
@@ -38,10 +38,15 @@ import com.starrocks.sql.optimizer.OptExpression;
 import com.starrocks.sql.optimizer.OptExpressionVisitor;
 import com.starrocks.sql.optimizer.base.ColumnRefSet;
 import com.starrocks.sql.optimizer.base.DistributionCol;
+import com.starrocks.sql.optimizer.base.DistributionProperty;
 import com.starrocks.sql.optimizer.base.DistributionSpec;
 import com.starrocks.sql.optimizer.base.EquivalentDescriptor;
 import com.starrocks.sql.optimizer.base.HashDistributionSpec;
+import com.starrocks.sql.optimizer.base.Ordering;
 import com.starrocks.sql.optimizer.operator.Operator;
+import com.starrocks.sql.optimizer.operator.OperatorType;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalCTEConsumeOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalCTEProduceOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalHashAggregateOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalHiveScanOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalIcebergScanOperator;
@@ -51,6 +56,8 @@ import com.starrocks.sql.optimizer.operator.physical.PhysicalScanOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalSetOperation;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalTableFunctionOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalTopNOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalUnionOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalWindowOperator;
 import com.starrocks.sql.optimizer.operator.scalar.BinaryPredicateOperator;
 import com.starrocks.sql.optimizer.operator.scalar.CallOperator;
 import com.starrocks.sql.optimizer.operator.scalar.CaseWhenOperator;
@@ -65,6 +72,7 @@ import com.starrocks.sql.optimizer.operator.scalar.LikePredicateOperator;
 import com.starrocks.sql.optimizer.operator.scalar.MatchExprOperator;
 import com.starrocks.sql.optimizer.operator.scalar.ScalarOperator;
 import com.starrocks.sql.optimizer.operator.scalar.ScalarOperatorVisitor;
+import com.starrocks.sql.optimizer.operator.scalar.SubfieldOperator;
 import com.starrocks.sql.optimizer.rule.tree.JsonPathRewriteRule;
 import com.starrocks.sql.optimizer.statistics.CacheDictManager;
 import com.starrocks.sql.optimizer.statistics.CacheRelaxDictManager;
@@ -73,6 +81,9 @@ import com.starrocks.sql.optimizer.statistics.ColumnStatistic;
 import com.starrocks.sql.optimizer.statistics.IDictManager;
 import com.starrocks.sql.optimizer.statistics.IRelaxDictManager;
 import com.starrocks.thrift.TAccessPathType;
+import com.starrocks.type.ArrayType;
+import com.starrocks.type.StructType;
+import com.starrocks.type.Type;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -80,14 +91,14 @@ import org.jetbrains.annotations.TestOnly;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
+import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
-import static com.starrocks.sql.ast.expression.BinaryType.EQ_FOR_NULL;
 import static org.apache.iceberg.TableProperties.DEFAULT_FILE_FORMAT;
 import static org.apache.iceberg.TableProperties.DEFAULT_FILE_FORMAT_DEFAULT;
 
@@ -102,7 +113,19 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     private static final Logger LOG = LogManager.getLogger(DecodeCollector.class);
 
     public static final Set<String> LOW_CARD_AGGREGATE_FUNCTIONS = Sets.newHashSet(FunctionSet.COUNT,
-            FunctionSet.MULTI_DISTINCT_COUNT, FunctionSet.MAX, FunctionSet.MIN, FunctionSet.APPROX_COUNT_DISTINCT);
+            FunctionSet.MULTI_DISTINCT_COUNT, FunctionSet.MAX, FunctionSet.MIN, FunctionSet.APPROX_COUNT_DISTINCT,
+            FunctionSet.ANY_VALUE, FunctionSet.ARRAY_AGG);
+
+    //TODO(by satanson): it seems that we can support more windows functions in future, at present, we only support
+    // LAG/LEAD/FIRST_VALUE/LAST_VALUE and the aggregations functions which can adopt low cardinality optimization
+    // and used as window function.
+    public static final Set<String> LOW_CARD_WINDOW_FUNCTIONS = Sets.newHashSet(FunctionSet.LAG, FunctionSet.LEAD,
+            FunctionSet.FIRST_VALUE, FunctionSet.LAST_VALUE);
+
+    static {
+        LOW_CARD_WINDOW_FUNCTIONS.addAll(LOW_CARD_AGGREGATE_FUNCTIONS);
+    }
+
     public static final Set<String> LOW_CARD_LOCAL_AGG_FUNCTIONS = Sets.newHashSet(FunctionSet.COUNT,
             FunctionSet.MAX, FunctionSet.MIN);
 
@@ -112,7 +135,12 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                     FunctionSet.LTRIM, FunctionSet.REGEXP_EXTRACT, FunctionSet.REGEXP_REPLACE, FunctionSet.REPEAT,
                     FunctionSet.REPLACE, FunctionSet.REVERSE, FunctionSet.RIGHT, FunctionSet.RPAD, FunctionSet.RTRIM,
                     FunctionSet.SPLIT_PART, FunctionSet.SUBSTR, FunctionSet.SUBSTRING, FunctionSet.SUBSTRING_INDEX,
-                    FunctionSet.TRIM, FunctionSet.UPPER, FunctionSet.IF, FunctionSet.LENGTH, FunctionSet.CHAR_LENGTH);
+                    FunctionSet.TRIM, FunctionSet.UPPER, FunctionSet.IF, FunctionSet.LENGTH, FunctionSet.CHAR_LENGTH,
+                    FunctionSet.COALESCE, FunctionSet.XX_HASH3_64, FunctionSet.XX_HASH3_128, FunctionSet.STR_TO_DATE,
+                    FunctionSet.MURMUR_HASH3_32);
+
+    public static final Set<String> LOW_CARD_STRUCT_FUNCTIONS =
+            ImmutableSet.of(FunctionSet.NAMED_STRUCT, FunctionSet.STRUCT, FunctionSet.ROW);
 
     // array<string> support:
     //  array<string> -> array<string>: array function
@@ -142,6 +170,17 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
 
     private final Map<Integer, ScalarOperator> stringRefToDefineExprMap = Maps.newHashMap();
 
+    // Maintains a mapping from structs operators to field columnRefs to use for encoded fields. Currently only fields
+    // which correspond to a column ref can be encoded. All field ColumnRefOperators should have STRING or ARRAY<STRING>
+    // types. Nested structs are not supported.
+    private final Map<ScalarOperator, Map<String, ColumnRefOperator>> structOpToFieldUseStringRef =
+            Maps.newIdentityHashMap();
+
+    // Maintains a mapping from structs ColumnRefs to field columnRefs to use for encoded fields. Currently only fields
+    // which correspond to a column ref can be encoded. All field ColumnRefOperators should have STRING or ARRAY<STRING>
+    // types. Nested structs are not supported.
+    private final Map<Integer, Map<String, ColumnRefOperator>> structRefToFieldUseStringRef = Maps.newHashMap();
+
     // string column use counter, 0 meanings decoded immediately after it was generated.
     // for compute global dict define expressions
     private final Map<Integer, Integer> expressionStringRefCounter = Maps.newHashMap();
@@ -149,7 +188,14 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     private final List<Integer> scanStringColumns = Lists.newArrayList();
 
     // For these columns we need to disable the associated rewrites.
-    private ColumnRefSet disableRewriteStringColumns = new ColumnRefSet();
+    private final ColumnRefSet disableRewriteStringColumns = new ColumnRefSet();
+
+    private final Set<Integer> joinEqColumnGroupIds = Sets.newHashSet();
+    private final List<Pair<Integer, Integer>> joinEqColumnGroups = Lists.newArrayList();
+
+    private final UnionDictionaryManager unionDictionaryManager;
+
+    private final Map<Integer, DecodeInfo> cteDecodeInfo = Maps.newHashMap();
 
     // operators which are the children of Match operator
     private final ColumnRefSet matchChildren = new ColumnRefSet();
@@ -162,6 +208,8 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     public DecodeCollector(SessionVariable session, boolean isQuery) {
         this.sessionVariable = session;
         this.isQuery = isQuery;
+        unionDictionaryManager = new UnionDictionaryManager(
+                sessionVariable, stringRefToDefineExprMap, globalDicts, joinEqColumnGroupIds);
     }
 
     public void collect(OptExpression root, DecodeContext context) {
@@ -213,6 +261,14 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         this.tableFunctionDependencies.forEach((k, v) -> {
             dependencyStringIds.computeIfAbsent(v, x -> Sets.newHashSet()).add(k);
         });
+
+        this.unionDictionaryManager.getUnionColumnGroups().forEach(s -> {
+            final Integer id = s.stream().findAny().orElseThrow();
+            dependencyStringIds.computeIfAbsent(id, x -> Sets.newHashSet()).addAll(s);
+        });
+        for (Pair<Integer, Integer> pair : joinEqColumnGroups) {
+            dependencyStringIds.computeIfAbsent(pair.first, x -> Sets.newHashSet()).add(pair.second);
+        }
         // build relation groups. The same closure is built into the same group
         // eg:
         // 1 -> (2, 3)
@@ -224,37 +280,54 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         // 2 -> (1,2,3)
         // 3 -> (1,2,3)
         // 4 -> (4)
-        Map<Integer, Set<Integer>> relations = Maps.newHashMap();
+        UnionFind<Integer> unionFind = new UnionFind<>();
         dependencyStringIds.forEach((k, v) -> {
-            relations.computeIfAbsent(k, x -> Sets.newHashSet());
-            final Set<Integer> relation = relations.get(k);
-            relation.addAll(v);
-            relation.add(k);
             for (Integer dependency : v) {
-                relations.put(dependency, relation);
+                unionFind.union(k, dependency);
             }
         });
 
-        final Set<Set<Integer>> relationSets = new HashSet<>(relations.values());
-        // for each relation group if any element in group is disable then disable all group
-        for (Set<Integer> relationSet : relationSets) {
-            for (Integer cid : relationSet) {
-                if (disableRewriteStringColumns.contains(cid)) {
-                    unionAll(disableRewriteStringColumns, relationSet);
-                    break;
-                }
-            }
+        for (int columnId : disableRewriteStringColumns.getColumnIds()) {
+            unionFind.getEquivGroup(columnId).forEach(disableRewriteStringColumns::union);
         }
     }
 
-    private void unionAll(ColumnRefSet columnRefSet, Set<Integer> cids) {
-        for (Integer cid : cids) {
-            columnRefSet.union(cid);
+    private void mergeJoinEqColumnDicts(Set<Integer> mergedUnionDictColumns) {
+        joinEqColumnGroupIds.stream().filter(mergedUnionDictColumns::contains)
+                .forEach(disableRewriteStringColumns::union);
+        for (Pair<Integer, Integer> p : joinEqColumnGroups) {
+            final int colId1 = p.first;
+            final int colId2 = p.second;
+
+            if (disableRewriteStringColumns.contains(colId1)) {
+                disableRewriteStringColumns.union(colId2);
+                continue;
+            }
+            if (disableRewriteStringColumns.contains(colId2)) {
+                disableRewriteStringColumns.union(colId1);
+                continue;
+            }
+
+            final ColumnDict d1 = globalDicts.get(colId1);
+            final ColumnDict d2 = globalDicts.get(colId2);
+            final Pair<ColumnDict, ColumnDict> mergedDict = ColumnDict.merge(d1, d2);
+            if (mergedDict == null) {
+                disableRewriteStringColumns.union(colId1);
+                disableRewriteStringColumns.union(colId2);
+                continue;
+            }
+
+            globalDicts.put(colId1, mergedDict.first);
+            globalDicts.put(colId2, mergedDict.second);
         }
     }
 
     private void initContext(DecodeContext context) {
+        Set<Integer> mergedUnionDictColumns = unionDictionaryManager.getMergedDictColumnIds();
+        mergeJoinEqColumnDicts(mergedUnionDictColumns);
         fillDisableStringColumns();
+        unionDictionaryManager.finalizeColumnDictionaries();
+        context.unionDictionaryManager = unionDictionaryManager;
 
         // choose the profitable string columns
         for (Integer cid : scanStringColumns) {
@@ -265,6 +338,10 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 continue;
             }
             if (expressionStringRefCounter.getOrDefault(cid, 0) > 1) {
+                context.allStringColumns.add(cid);
+                continue;
+            }
+            if (mergedUnionDictColumns.contains(cid)) {
                 context.allStringColumns.add(cid);
                 continue;
             }
@@ -284,23 +361,25 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         }
         // resolve depend-on relation:
         // like: b = upper(a), c = lower(b), if we forbidden a, should forbidden b & c too
-        for (Integer cid : stringRefToDefineExprMap.keySet()) {
+        stringRefToDefineExprMap.forEach((cid, defineExpr) ->  {
             if (matchChildren.contains(cid)) {
-                continue;
+                return;
             }
             if (context.allStringColumns.contains(cid)) {
-                continue;
+                return;
             }
             if (disableRewriteStringColumns.contains(cid)) {
-                continue;
+                return;
             }
             if (!checkDependOnExpr(cid, context.allStringColumns)) {
-                continue;
+                return;
             }
-            if (globalDicts.containsKey(cid) || expressionStringRefCounter.getOrDefault(cid, 0) != 0) {
+            // Structs which pass checkDependOnExpr have at least one encoded field. We keep the structs encoded.
+            if (globalDicts.containsKey(cid) || expressionStringRefCounter.getOrDefault(cid, 0) != 0
+                    || defineExpr.getType().isStructType()) {
                 context.allStringColumns.add(cid);
             }
-        }
+        });
 
         // Save the information of profitable string columns to DecodeContext
         for (Integer cid : context.allStringColumns) {
@@ -324,7 +403,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             for (CallOperator agg : aggregateExprs) {
                 if (agg.getColumnRefs().stream().map(ColumnRefOperator::getId)
                         .anyMatch(context.allStringColumns::contains)) {
-                    context.stringAggregateExprs.addAll(aggregateExprs);
+                    context.stringAggregateExprs.put(aggregateId, aggregateExprs);
                     context.allStringColumns.add(aggregateId);
                     break;
                 }
@@ -340,8 +419,70 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             info.inputStringColumns.intersect(alls);
             if (!info.isEmpty()) {
                 context.operatorDecodeInfo.put(operator, info);
+                if (operator instanceof PhysicalHashAggregateOperator hashAgg) {
+                    hashAgg.getAggregations().keySet().forEach(agg -> {
+                        context.aggIdToSupportColumns.computeIfAbsent(agg.getId(), k -> new ColumnRefSet())
+                                .union(info.inputStringColumns);
+                    });
+                }
+                if (operator instanceof PhysicalWindowOperator window) {
+                    window.getAnalyticCall().keySet().forEach(agg -> {
+                        context.aggIdToSupportColumns.computeIfAbsent(agg.getId(), k -> new ColumnRefSet())
+                                .union(info.inputStringColumns);
+                    });
+                }
+                if (operator instanceof PhysicalTopNOperator topN && topN.getPreAggCall() != null) {
+                    topN.getPreAggCall().keySet().forEach(agg -> {
+                        context.aggIdToSupportColumns.computeIfAbsent(agg.getId(), k -> new ColumnRefSet())
+                                .union(info.inputStringColumns);
+                    });
+                }
             }
         }
+        // Filling context's structOpToFieldUseStringRefMap and structRefToFieldUseStringRefMap with fields in
+        // context.allStringColumns.
+        context.structOpToFieldUseStringRefMap = structOpToFieldUseStringRef.entrySet().stream()
+                .map(e -> new Pair<>(
+                        e.getKey(),
+                        e.getValue().entrySet().stream()
+                                .filter(e2 -> context.allStringColumns.contains(e2.getValue().getId()))
+                                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))))
+                .filter(k -> !k.second.isEmpty())
+                .collect(Collectors.toMap(
+                        p -> p.first,
+                        p -> p.second,
+                        (oldVal, newVal) -> oldVal,
+                        IdentityHashMap::new));
+
+        context.structRefToFieldUseStringRefMap = structRefToFieldUseStringRef.entrySet().stream()
+                .map(e -> new Pair<>(
+                        e.getKey(),
+                        e.getValue().entrySet().stream()
+                                .filter(e2 -> context.allStringColumns.contains(e2.getValue().getId()))
+                                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))))
+                .filter(k -> !k.second.isEmpty())
+                .collect(Collectors.toMap(p -> p.first, p -> p.second));
+    }
+
+    // For SubfieldOperators, we just need to get the field column refs, not the whole columns in the struct.
+    private List<ColumnRefOperator> getColumnRefs(ScalarOperator op) {
+        if (op.isColumnRef()) {
+            return List.of((ColumnRefOperator) op);
+        }
+        if (op instanceof SubfieldOperator) {
+            SubfieldOperator subfieldOp = op.cast();
+            Map<String, ColumnRefOperator> fields = getFieldUseStringRefMap(subfieldOp.getChild((0)));
+            if (fields != null
+                    && subfieldOp.getFieldNames().size() == 1
+                    && fields.containsKey(subfieldOp.getFieldNames().get(0))) {
+                return List.of(fields.get(subfieldOp.getFieldNames().get(0)));
+            }
+        }
+        List<ColumnRefOperator> result = Lists.newArrayList();
+        for (ScalarOperator child : op.getChildren()) {
+            result.addAll(getColumnRefs(child));
+        }
+        return result;
     }
 
     private boolean checkDependOnExpr(int cid, Collection<Integer> checkList) {
@@ -352,7 +493,28 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             return false;
         }
         ScalarOperator define = stringRefToDefineExprMap.get(cid);
-        for (ColumnRefOperator ref : define.getColumnRefs()) {
+        if (define instanceof CallOperator && FunctionSet.ARRAY_AGG.equals(((CallOperator) define).getFnName())) {
+            return define.getChild(0).isColumnRef() &&
+                    checkDependOnExpr(((ColumnRefOperator) define.getChild(0)).getId(), checkList);
+        }
+        if (define.getType().isStructType()) {
+            Map<String, ColumnRefOperator> fieldsMap = getFieldUseStringRefMap(define);
+            if (fieldsMap == null) {
+                return false;
+            }
+            // Any structs with encoded fields should pass. We filter the fields list later.
+            return fieldsMap.values().stream().anyMatch(c -> checkDependOnExpr(c.getId(), checkList));
+        }
+        if (define instanceof SubfieldOperator) {
+            SubfieldOperator subfieldOperator = define.cast();
+            Map<String, ColumnRefOperator> fieldsMap = getFieldUseStringRefMap(subfieldOperator.getChild(0));
+            if (fieldsMap == null || subfieldOperator.getFieldNames().size() != 1) {
+                return false;
+            }
+            ColumnRefOperator fieldRef = fieldsMap.get(subfieldOperator.getFieldNames().get(0));
+            return fieldRef != null && checkDependOnExpr(fieldRef.getId(), checkList);
+        }
+        for (ColumnRefOperator ref : getColumnRefs(define)) {
             if (ref.getId() == cid) {
                 return false;
             }
@@ -363,22 +525,44 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         return true;
     }
 
+    Map<String, ColumnRefOperator> getFieldUseStringRefMap(ScalarOperator op) {
+        if (op.isColumnRef()) {
+            return structRefToFieldUseStringRef.get(((ColumnRefOperator) op).getId());
+        }
+        return structOpToFieldUseStringRef.get(op);
+    }
+
+    void setDefineExpr(ColumnRefOperator col, ScalarOperator define, int counter) {
+        stringRefToDefineExprMap.putIfAbsent(col.getId(), define);
+        Map<String, ColumnRefOperator> fieldsMap = getFieldUseStringRefMap(define);
+        if (fieldsMap != null) {
+            structRefToFieldUseStringRef.putIfAbsent(col.getId(), fieldsMap);
+        }
+        expressionStringRefCounter.put(col.getId(), counter);
+    }
+
     private DecodeInfo collectImpl(OptExpression optExpression, OptExpression parent) {
         DecodeInfo context;
         if (optExpression.arity() == 1) {
             OptExpression child = optExpression.inputAt(0);
             context = collectImpl(child, optExpression);
         } else {
-            context = new DecodeInfo();
+            context = DecodeInfo.create();
             for (int i = 0; i < optExpression.arity(); ++i) {
                 OptExpression child = optExpression.inputAt(i);
-                context.addChildInfo(collectImpl(child, optExpression));
+                DecodeInfo info = collectImpl(child, optExpression);
+                if (child.getOp() instanceof PhysicalCTEProduceOperator produce) {
+                    cteDecodeInfo.put(produce.getCteId(), info);
+                } else {
+                    context.addChildInfo(info);
+                }
             }
         }
 
         context.parent = parent;
         DecodeInfo info = optExpression.getOp().accept(this, optExpression, context);
         if (info.isEmpty()) {
+            collectProjection(optExpression.getOp(), info);
             return info;
         }
 
@@ -389,9 +573,15 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             }
         });
         info.inputStringColumns.getStream().forEach(c -> {
-            if (expressionStringRefCounter.containsKey(c)) {
-                expressionStringRefCounter.put(c, expressionStringRefCounter.get(c) + 1);
-            }
+            // For structs, we increase the counter of all of its encoded fields
+            List<Integer> columns = structRefToFieldUseStringRef.containsKey(c)
+                    ? structRefToFieldUseStringRef.get(c).values().stream().map(ColumnRefOperator::getId).toList()
+                    : List.of(c);
+            columns.forEach(id -> {
+                if (expressionStringRefCounter.containsKey(id)) {
+                    expressionStringRefCounter.put(id, expressionStringRefCounter.get(id) + 1);
+                }
+            });
         });
         allOperatorDecodeInfo.put(optExpression.getOp(), info);
         collectPredicate(optExpression.getOp(), info);
@@ -402,6 +592,35 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     @Override
     public DecodeInfo visit(OptExpression optExpression, DecodeInfo context) {
         return context.createDecodeInfo();
+    }
+
+    @Override
+    public DecodeInfo visitPhysicalCTEProduce(OptExpression optExpression, DecodeInfo context) {
+        return context.createOutputInfo();
+    }
+
+    @Override
+    public DecodeInfo visitPhysicalCTEConsume(OptExpression optExpression, DecodeInfo context) {
+        PhysicalCTEConsumeOperator consume = optExpression.getOp().cast();
+        context = cteDecodeInfo.get(consume.getCteId());
+        Preconditions.checkNotNull(context);
+        if (context.outputStringColumns.isEmpty()) {
+            return DecodeInfo.empty();
+        }
+        DecodeInfo info = DecodeInfo.empty();
+        info.inputStringColumns.union(context.outputStringColumns);
+        // Map producer columns to consumer columns (like a projection)
+        for (var entry : consume.getCteOutputColumnRefMap().entrySet()) {
+            ColumnRefOperator consumerCol = entry.getKey();
+            ColumnRefOperator producerCol = entry.getValue();
+
+            if (info.inputStringColumns.contains(producerCol.getId())) {
+                setDefineExpr(consumerCol, producerCol, 1);
+                info.outputStringColumns.union(consumerCol);
+                info.usedStringColumns.union(producerCol);
+            }
+        }
+        return info;
     }
 
     @Override
@@ -465,8 +684,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 // min/max should replace to dict column, count/count distinct don't need
                 if (FunctionSet.MAX.equals(value.getFnName()) || FunctionSet.MIN.equals(value.getFnName())) {
                     info.outputStringColumns.union(key.getId());
-                    stringRefToDefineExprMap.putIfAbsent(key.getId(), value);
-                    expressionStringRefCounter.put(key.getId(), 1);
+                    setDefineExpr(key, value, 1);
                 }
             }
         }
@@ -476,32 +694,107 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
 
     @Override
     public DecodeInfo visitPhysicalFilter(OptExpression optExpression, DecodeInfo context) {
-        if (optExpression.getInputs().get(0).getOp() instanceof PhysicalOlapScanOperator) {
-            // PhysicalFilter->PhysicalOlapScan is a special pattern, the Filter's predicate is extracted from OlapScan,
-            // we should keep the DecodeInfo from it's input.
-            return context.createOutputInfo();
+        return context.createOutputInfo();
+    }
+
+    private boolean tryHandleJoinEqPredicate(DecodeInfo decodeInfo,
+                                             ScalarOperator predicate) {
+
+        if (predicate.getOpType() != OperatorType.BINARY) {
+            return false;
         }
-        return context.createDecodeInfo();
+
+        BinaryPredicateOperator binary = (BinaryPredicateOperator) predicate;
+        if (!binary.getBinaryType().isEquivalence()) {
+            return false;
+        }
+
+        ScalarOperator left = binary.getChild(0);
+        ScalarOperator right = binary.getChild(1);
+        if (!left.isColumnRef() || !right.isColumnRef()) {
+            return false;
+        }
+
+        ColumnRefOperator leftRef = (ColumnRefOperator) left;
+        ColumnRefOperator rightRef = (ColumnRefOperator) right;
+        if (!decodeInfo.inputStringColumns.contains(leftRef) || !decodeInfo.inputStringColumns.contains(rightRef)) {
+            return false;
+        }
+
+        int colId1 = leftRef.getId();
+        int colId2 = rightRef.getId();
+        // Each low-cardinality column can participate in only one equality condition.
+        if (joinEqColumnGroupIds.contains(colId1) || joinEqColumnGroupIds.contains(colId2)) {
+            return false;
+        }
+        // Low-cardinality columns cannot be DefineExpr, because we need merge these two global dicts.
+        if (!globalDicts.containsKey(colId1) || !globalDicts.containsKey(colId2)) {
+            return false;
+        }
+
+        joinEqColumnGroupIds.add(colId1);
+        joinEqColumnGroupIds.add(colId2);
+        joinEqColumnGroups.add(new Pair<>(colId2, colId1));
+        return true;
+    }
+
+    /**
+     * Retain low-cardinality columns used in join ON equality conditions and add them to joinEqColumnGroups.
+     * All other columns used in join ON conditions are added to disableRewriteStringColumns.
+     *
+     * <p> Constraints:
+     * <ul>
+     * <li> Both left and right keys in the ON equality condition must be low-cardinality column refs.
+     * <li> Each low-cardinality column can participate in only one equality condition.
+     * <li> Low-cardinality columns cannot be DefineExpr.
+     * <li> Currently only supports broadcast join.
+     * </ul>
+     */
+    private void extractJoinEqGroups(DecodeInfo decodeInfo, ScalarOperator root) {
+        if (OperatorType.COMPOUND.equals(root.getOpType())) {
+            CompoundPredicateOperator compound = (CompoundPredicateOperator) root;
+            if (compound.isAnd()) {
+                for (ScalarOperator child : compound.getChildren()) {
+                    extractJoinEqGroups(decodeInfo, child);
+                }
+                return;
+            }
+        }
+
+        if (tryHandleJoinEqPredicate(decodeInfo, root)) {
+            return;
+        }
+
+        root.getUsedColumns().getStream().forEach(disableRewriteStringColumns::union);
     }
 
     @Override
     public DecodeInfo visitPhysicalJoin(OptExpression optExpression, DecodeInfo context) {
-        if (context.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
-        }
         PhysicalJoinOperator join = optExpression.getOp().cast();
         DecodeInfo result = context.createOutputInfo();
         if (join.getOnPredicate() == null) {
             return result;
         }
+
         ColumnRefSet onColumns = join.getOnPredicate().getUsedColumns();
-        if (!result.inputStringColumns.containsAny(onColumns)) {
+        if (context.outputStringColumns.isEmpty() || !result.inputStringColumns.containsAny(onColumns)) {
+            onColumns.getStream().forEach(disableRewriteStringColumns::union);
             return result;
         }
-        onColumns.getStream().forEach(c -> disableRewriteStringColumns.union(c));
+
+        DistributionProperty leftDistribution = optExpression.getRequiredProperties().get(0).getDistributionProperty();
+        DistributionProperty rightDistribution = optExpression.getRequiredProperties().get(1).getDistributionProperty();
+        // Currently only supports broadcast join.
+        if (!sessionVariable.isEnableLowCardinalityOptimizeForJoin() ||
+                (leftDistribution.isShuffle() && rightDistribution.isShuffle())) {
+            onColumns.getStream().forEach(disableRewriteStringColumns::union);
+        } else {
+            extractJoinEqGroups(result, join.getOnPredicate());
+        }
+
         result.outputStringColumns.clear();
         result.inputStringColumns.getStream().forEach(c -> {
-            if (!onColumns.contains(c)) {
+            if (!disableRewriteStringColumns.contains(c)) {
                 result.outputStringColumns.union(c);
             }
         });
@@ -527,13 +820,43 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
 
     private DecodeInfo visitPhysicalSetOperation(OptExpression optExpression, DecodeInfo context) {
         if (context.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
+        PhysicalSetOperation setOp = optExpression.getOp().cast();
         DistributionSpec dist = optExpression.getRequiredProperties().get(0).getDistributionProperty().getSpec();
+        if (setOp instanceof PhysicalUnionOperator && ((PhysicalUnionOperator) setOp).isUnionAll()) {
+            Preconditions.checkState(!(dist instanceof HashDistributionSpec));
+            DecodeInfo result = DecodeInfo.create();
+            result.inputStringColumns.union(context.outputStringColumns);
+            for (int i = 0; i < setOp.getOutputColumnRefOp().size(); ++i) {
+                final int finalI = i;
+                List<ColumnRefOperator> childColumns = setOp.getChildOutputColumns().stream()
+                        .map(l -> l.get(finalI)).toList();
+                List<Integer> childColumnIds = childColumns.stream().map(ColumnRefOperator::getId).toList();
+                boolean isCandidate = childColumns.stream().allMatch(
+                        c -> context.outputStringColumns.contains(c) || unionDictionaryManager.isSupportedConstant(c));
+                int outputColumnId = setOp.getOutputColumnRefOp().get(i).getId();
+                Integer useChildId;
+                if (isCandidate && (useChildId = unionDictionaryManager.mergeDictionaries(childColumnIds)) != null) {
+                    childColumnIds.stream().filter(context.outputStringColumns::contains).forEach(c -> {
+                        result.usedStringColumns.union(c);
+                        expressionStringRefCounter.put(c, expressionStringRefCounter.getOrDefault(c, 0) + 1);
+                    });
+                    stringRefToDefineExprMap.put(outputColumnId, childColumns.stream()
+                            .filter(c -> c.getId() == useChildId).findAny().orElseThrow());
+                    expressionStringRefCounter.put(outputColumnId, 1);
+                    result.outputStringColumns.union(outputColumnId);
+                } else {
+                    childColumns.stream().filter(c -> context.outputStringColumns.contains(c))
+                            .forEach(result.decodeStringColumns::union);
+                }
+            }
+            result.inputStringColumns.except(result.decodeStringColumns);
+            return result;
+        }
         if (!(dist instanceof HashDistributionSpec)) {
             return visit(optExpression, context);
         }
-        PhysicalSetOperation setOp = optExpression.getOp().cast();
         DecodeInfo result = context.createOutputInfo();
         result.decodeStringColumns.except(result.outputStringColumns);
         result.outputStringColumns.getStream().forEach(c -> disableRewriteStringColumns.union(c));
@@ -563,9 +886,129 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     }
 
     @Override
+    public DecodeInfo visitPhysicalAnalytic(OptExpression optExpression, DecodeInfo context) {
+        if (context.outputStringColumns.isEmpty()) {
+            return DecodeInfo.empty();
+        }
+        PhysicalWindowOperator windowOp = optExpression.getOp().cast();
+        DecodeInfo info = context.createOutputInfo();
+
+        ColumnRefSet disableColumns = new ColumnRefSet();
+        for (ColumnRefOperator key : windowOp.getAnalyticCall().keySet()) {
+            CallOperator windowCallOp = windowOp.getAnalyticCall().get(key);
+            String fnName = windowCallOp.getFnName();
+            if (!LOW_CARD_WINDOW_FUNCTIONS.contains(fnName)) {
+                disableColumns.union(windowCallOp.getUsedColumns());
+                disableColumns.union(key);
+                continue;
+            }
+
+            // LEAD/LAG with specified default value can not adopt low-cardinality optimization
+            if ((fnName.equals(FunctionSet.LEAD) || fnName.equals(FunctionSet.LAG))) {
+                ScalarOperator lastArg = windowCallOp.getArguments().get(windowCallOp.getArguments().size() - 1);
+                if (!lastArg.isConstantNull()) {
+                    disableColumns.union(windowCallOp.getUsedColumns());
+                    disableColumns.union(key);
+                    continue;
+                }
+            }
+
+            Map<Boolean, List<ScalarOperator>> argGroups = windowCallOp.getChildren().stream()
+                    .filter(Predicate.not(ScalarOperator::isConstant))
+                    .collect(Collectors.partitioningBy(ScalarOperator::isColumnRef));
+
+            List<ScalarOperator> columnRefArgs = argGroups.get(true);
+            List<ScalarOperator> exprArgs = argGroups.get(false);
+
+            // window function must have only one string-type column-ref argument.
+            if (!exprArgs.isEmpty() || columnRefArgs.size() != 1) {
+                disableColumns.union(windowCallOp.getUsedColumns());
+                disableColumns.union(key);
+            }
+        }
+
+        if (!disableColumns.isEmpty()) {
+            info.decodeStringColumns.union(info.inputStringColumns);
+            info.decodeStringColumns.intersect(disableColumns);
+            info.inputStringColumns.except(info.decodeStringColumns);
+        }
+
+        info.outputStringColumns.clear();
+        for (ColumnRefOperator key : windowOp.getAnalyticCall().keySet()) {
+            if (disableColumns.contains(key)) {
+                continue;
+            }
+            CallOperator value = windowOp.getAnalyticCall().get(key);
+            if (!info.inputStringColumns.containsAll(value.getUsedColumns())) {
+                continue;
+            }
+
+            stringAggregateExpressions.computeIfAbsent(key.getId(), x -> Lists.newArrayList()).add(value);
+            // if the function return type is not string or array<string>, then its output column can not be
+            // encoded, however the function evaluation can adopt encoded columns, for examples:
+            // 1. select v1, count(t.a1) over(partition by v1) select t0, unnest(t0.a1) t(a1);
+            // 2. select v1, count(distinct t.a1) over(partition by v1) select t0, unnest(t0.a1) t(a1);
+            // t0.a1 is array<string> column and low-cardinality encoded.
+            if (value.getType().isStringType() || value.getType().isStringArrayType()) {
+                info.outputStringColumns.union(key.getId());
+                setDefineExpr(key, value, 1);
+            }
+        }
+
+        for (ScalarOperator partitionBy : windowOp.getPartitionExpressions()) {
+            Preconditions.checkArgument(partitionBy instanceof ColumnRefOperator);
+            ColumnRefOperator partitionByColumnRef = (ColumnRefOperator) partitionBy;
+            if (info.inputStringColumns.contains(partitionByColumnRef) &&
+                    !info.decodeStringColumns.contains(partitionByColumnRef)) {
+                info.outputStringColumns.union(partitionByColumnRef);
+            }
+        }
+
+        for (Ordering orderBy : windowOp.getOrderByElements()) {
+            ColumnRefOperator orderByColumnRef = orderBy.getColumnRef();
+            if (info.inputStringColumns.contains(orderByColumnRef) &&
+                    !info.decodeStringColumns.contains(orderByColumnRef)) {
+                info.outputStringColumns.union(orderByColumnRef);
+            }
+        }
+
+        // the columns which are not arguments of window functions can also use encoded column;
+        // for an example:
+        // select t.a1, t.a2, lead(t.a1) over(partition by t.a2) select t0, unnest(t0.a1, t0.a2) t(a1,a2);
+        // both t0.a1 and t0.a2 are array<string> and low-cardinality encoded, the output columns: t.a1, t.a2,
+        // lead(t.a1) and t.a2 in partition-by all can adopt encoded columns.
+        ColumnRefSet outerColumnSet = new ColumnRefSet();
+        outerColumnSet.union(context.outputStringColumns);
+        outerColumnSet.intersect(info.inputStringColumns);
+        outerColumnSet.except(info.decodeStringColumns);
+        outerColumnSet.except(disableColumns);
+        info.outputStringColumns.union(outerColumnSet);
+        return info;
+    }
+
+    private boolean shouldProcessAggFunction(CallOperator agg) {
+        final boolean enableArrayAgg = sessionVariable.isEnableArrayAggLowCardinalityOptimize()
+                && sessionVariable.isEnableArrayLowCardinalityOptimize()
+                && sessionVariable.isEnableStructLowCardinalityOptimize();
+        final boolean isArrayAgg = FunctionSet.ARRAY_AGG.equals(agg.getFnName());
+        if (isArrayAgg && !enableArrayAgg) {
+            return false;
+        }
+        if (!LOW_CARD_AGGREGATE_FUNCTIONS.contains(agg.getFnName())) {
+            return false;
+        }
+        if (isArrayAgg) {
+            // dictify array_agg only when the first child can be dictified.
+            return agg.getChildren().stream().allMatch(c -> c.isColumnRef() || c.isConstantRef())
+                    && agg.getChild(0).isColumnRef() && agg.getFunction().getArgs()[0].isStringType();
+        }
+        return agg.getChildren().size() == 1 && agg.getChildren().get(0).isColumnRef();
+    }
+
+    @Override
     public DecodeInfo visitPhysicalHashAggregate(OptExpression optExpression, DecodeInfo context) {
         if (context.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
         PhysicalHashAggregateOperator aggregate = optExpression.getOp().cast();
         DecodeInfo info = context.createOutputInfo();
@@ -573,12 +1016,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         ColumnRefSet disableColumns = new ColumnRefSet();
         for (ColumnRefOperator key : aggregate.getAggregations().keySet()) {
             CallOperator agg = aggregate.getAggregations().get(key);
-            if (!LOW_CARD_AGGREGATE_FUNCTIONS.contains(agg.getFnName())) {
-                disableColumns.union(agg.getUsedColumns());
-                disableColumns.union(key);
-                continue;
-            }
-            if (agg.getChildren().size() != 1 || !agg.getChildren().get(0).isColumnRef()) {
+            if (!shouldProcessAggFunction(agg)) {
                 disableColumns.union(agg.getUsedColumns());
                 disableColumns.union(key);
             }
@@ -596,16 +1034,42 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 continue;
             }
             CallOperator value = aggregate.getAggregations().get(key);
-            if (!info.inputStringColumns.containsAll(value.getUsedColumns())) {
+            if (FunctionSet.ARRAY_AGG.equals(value.getFnName())) {
+                if (!value.getChild(0).isColumnRef() ||
+                        !info.inputStringColumns.contains(value.getChild(0).cast())) {
+                    continue;
+                }
+            } else if (!info.inputStringColumns.containsAll(value.getUsedColumns())) {
                 continue;
             }
             // aggregate ref -> aggregate expr
             stringAggregateExpressions.computeIfAbsent(key.getId(), x -> Lists.newArrayList()).add(value);
-            // min/max should replace to dict column, count/count distinct don't need
-            if (FunctionSet.MAX.equals(value.getFnName()) || FunctionSet.MIN.equals(value.getFnName())) {
+            if (supportLowCardinality(value.getType())) {
                 info.outputStringColumns.union(key.getId());
-                stringRefToDefineExprMap.putIfAbsent(key.getId(), value);
-                expressionStringRefCounter.put(key.getId(), 1);
+                AggregateFunction aggFn = (AggregateFunction) value.getFunction();
+                if (aggFn.getIntermediateTypeOrReturnType().isStructType()
+                        && !structRefToFieldUseStringRef.containsKey(key.getId())) {
+                    final Map<String, ColumnRefOperator> fieldsData;
+                    if (FunctionSet.ARRAY_AGG.equals(aggFn.functionName())) {
+                        fieldsData = Maps.newHashMap();
+                        StructType structType = (StructType) aggFn.getIntermediateTypeOrReturnType();
+                        Preconditions.checkState(structType.getFields().size() == value.getArguments().size());
+                        for (int i = 0; i < value.getArguments().size(); i++) {
+                            if (value.getArguments().get(i).isColumnRef()
+                                    && info.inputStringColumns.contains(value.getArguments().get(i).cast())) {
+                                fieldsData.put(structType.getField(i).getName(), value.getArguments().get(i).cast());
+                            }
+                        }
+                    } else if (FunctionSet.ANY_VALUE.equals(aggFn.functionName())) {
+                        fieldsData = getFieldUseStringRefMap(value.getArguments().get(0));
+                    } else {
+                        throw new UnsupportedOperationException(
+                                String.format("Unsupported function: %s with Struct Type", aggFn.functionName()));
+                    }
+                    Preconditions.checkNotNull(fieldsData);
+                    structOpToFieldUseStringRef.put(value, fieldsData);
+                }
+                setDefineExpr(key, value, 1);
             } else if (aggregate.getType().isLocal() || aggregate.getType().isDistinct()) {
                 // count/count distinct, need output dict-set in 1st stage
                 info.outputStringColumns.union(key.getId());
@@ -630,7 +1094,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     @Override
     public DecodeInfo visitPhysicalTableFunction(OptExpression optExpression, DecodeInfo context) {
         if (context.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
         DecodeInfo info = context.createOutputInfo();
         PhysicalTableFunctionOperator tableFunc = optExpression.getOp().cast();
@@ -658,8 +1122,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             ColumnRefOperator unnestInput = tableFunc.getFnParamColumnRefs().get(i);
 
             if (info.inputStringColumns.contains(unnestInput)) {
-                stringRefToDefineExprMap.put(unnestOutput.getId(), unnestInput);
-                expressionStringRefCounter.put(unnestOutput.getId(), 1);
+                setDefineExpr(unnestOutput, unnestInput, 1);
                 info.outputStringColumns.union(unnestOutput);
                 tableFunctionDependencies.put(unnestInput.getId(), unnestOutput.getId());
             }
@@ -670,7 +1133,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     @Override
     public DecodeInfo visitPhysicalDistribution(OptExpression optExpression, DecodeInfo context) {
         if (context.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
         return context.createOutputInfo();
     }
@@ -683,17 +1146,17 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 PhysicalPartition::getVisibleVersionTime).max(Long::compareTo).orElse(0L);
 
         if (table.hasForbiddenGlobalDict()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
         if (table.inputHasTempPartition(scan.getSelectedPartitionId())) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
 
         // check dict column
-        DecodeInfo info = new DecodeInfo();
+        DecodeInfo info = DecodeInfo.create();
         for (ColumnRefOperator column : scan.getColRefToColumnMetaMap().keySet()) {
             // Condition 1:
-            if (!supportAndEnabledLowCardinality(column.getType())) {
+            if (!supportAndEnabledLowCardinalityForScanOperator(column.getType())) {
                 continue;
             }
 
@@ -737,7 +1200,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         }
 
         if (info.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
 
         return info;
@@ -751,7 +1214,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     private Pair<Boolean, Optional<ColumnDict>> checkConnectorGlobalDict(PhysicalScanOperator scan, Table table,
                                                                          ColumnRefOperator column) {
         // Condition 1:
-        if (!supportAndEnabledLowCardinality(column.getType())) {
+        if (!supportAndEnabledLowCardinalityForScanOperator(column.getType())) {
             return new Pair<>(false, Optional.empty());
         }
 
@@ -795,18 +1258,18 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     @Override
     public DecodeInfo visitPhysicalHiveScan(OptExpression optExpression, DecodeInfo context) {
         if (!canBlockingOutput || !sessionVariable.isUseLowCardinalityOptimizeOnLake() || !isQuery) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
         PhysicalHiveScanOperator scan = optExpression.getOp().cast();
         HiveTable table = (HiveTable) scan.getTable();
 
         // only support parquet
         if (table.getStorageFormat() == null || !table.getStorageFormat().equals(HiveStorageFormat.PARQUET)) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
 
         // check dict column
-        DecodeInfo info = new DecodeInfo();
+        DecodeInfo info = DecodeInfo.create();
         for (ColumnRefOperator column : scan.getColRefToColumnMetaMap().keySet()) {
             // don't collect partition columns
             if (table.getPartitionColumnNames().contains(column.getName())) {
@@ -822,7 +1285,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         }
 
         if (info.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
 
         return info;
@@ -831,7 +1294,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     @Override
     public DecodeInfo visitPhysicalIcebergScan(OptExpression optExpression, DecodeInfo context) {
         if (!canBlockingOutput || !sessionVariable.isUseLowCardinalityOptimizeOnLake() || !isQuery) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
 
         PhysicalIcebergScanOperator scan = optExpression.getOp().cast();
@@ -840,11 +1303,11 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         // only support parquet
         if (!table.getNativeTable().properties().getOrDefault(DEFAULT_FILE_FORMAT, DEFAULT_FILE_FORMAT_DEFAULT).
                 equalsIgnoreCase("parquet")) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
 
         // check dict column
-        DecodeInfo info = new DecodeInfo();
+        DecodeInfo info = DecodeInfo.create();
         for (ColumnRefOperator column : scan.getColRefToColumnMetaMap().keySet()) {
             if (table.getPartitionColumnNames().contains(column.getName())) {
                 continue;
@@ -859,7 +1322,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         }
 
         if (info.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
 
         return info;
@@ -877,9 +1340,9 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
 
     // complex type may be support prune subfield, doesn't read data
     private boolean checkComplexTypeInvalid(PhysicalOlapScanOperator scan, ColumnRefOperator column) {
-        String colName = scan.getColRefToColumnMetaMap().get(column).getName();
+        String colId = scan.getColRefToColumnMetaMap().get(column).getColumnId().getId();
         for (ColumnAccessPath path : scan.getColumnAccessPaths()) {
-            if (!StringUtils.equalsIgnoreCase(colName, path.getPath()) || path.getType() != TAccessPathType.ROOT) {
+            if (!StringUtils.equalsIgnoreCase(colId, path.getPath()) || path.getType() != TAccessPathType.ROOT) {
                 continue;
             }
             // check the read path
@@ -897,10 +1360,10 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         if (!sessionVariable.isEnableJSONV2DictOpt()) {
             return false;
         }
-        String colName = scan.getColRefToColumnMetaMap().get(column).getName();
+        String colId = scan.getColRefToColumnMetaMap().get(column).getColumnId().getId();
         for (ColumnAccessPath path : scan.getColumnAccessPaths()) {
             if (path.isExtended() &&
-                    path.getLinearPath().equals(colName) &&
+                    path.getLinearPath().equals(colId) &&
                     path.getType() == TAccessPathType.ROOT &&
                     path.getValueType().isStringType()) {
                 return true;
@@ -914,7 +1377,9 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         if (operator.getPredicate() == null) {
             return;
         }
-        DictExpressionCollector dictExpressionCollector = new DictExpressionCollector(info.outputStringColumns);
+        DictExpressionCollector dictExpressionCollector = new DictExpressionCollector(info.outputStringColumns,
+                structOpToFieldUseStringRef, this::getFieldUseStringRefMap,
+                sessionVariable.isEnableStructLowCardinalityOptimize());
         dictExpressionCollector.collect(operator.getPredicate());
 
         info.outputStringColumns.getStream().forEach(c -> {
@@ -933,7 +1398,11 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             return;
         }
 
-        ColumnRefSet decodeInput = info.outputStringColumns;
+        ColumnRefSet decodeInput = new ColumnRefSet();
+        decodeInput.union(info.outputStringColumns);
+        info.outputStringColumns.getStream().filter(structRefToFieldUseStringRef::containsKey).forEach(
+                c -> decodeInput.union(structRefToFieldUseStringRef.get(c).values())
+        );
         info.outputStringColumns = new ColumnRefSet();
         for (ColumnRefOperator key : operator.getProjection().getColumnRefMap().keySet()) {
             if (decodeInput.contains(key)) {
@@ -941,7 +1410,9 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 continue;
             }
 
-            DictExpressionCollector dictExpressionCollector = new DictExpressionCollector(decodeInput);
+            DictExpressionCollector dictExpressionCollector = new DictExpressionCollector(decodeInput,
+                    structOpToFieldUseStringRef, this::getFieldUseStringRefMap,
+                    sessionVariable.isEnableStructLowCardinalityOptimize());
 
             ScalarOperator value = operator.getProjection().getColumnRefMap().get(key);
             dictExpressionCollector.collect(value);
@@ -957,28 +1428,35 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 // whole expression support dictionary, define new dict column
                 // only support varchar/array<varchar> column
                 if (exprs.contains(value) && supportLowCardinality(value.getType())) {
-                    stringRefToDefineExprMap.put(key.getId(), value);
-                    expressionStringRefCounter.putIfAbsent(key.getId(), 0);
+                    setDefineExpr(key, value, 0);
                     info.outputStringColumns.union(key.getId());
                 }
                 info.usedStringColumns.union(c);
             });
+            if (structOpToFieldUseStringRef.containsKey(value)) {
+                setDefineExpr(key, value, 0);
+                info.outputStringColumns.union(key.getId());
+            }
+            unionDictionaryManager.recordIfConstant(key, value);
             matchChildren.union(dictExpressionCollector.matchChildren);
         }
     }
 
-    private static boolean supportLowCardinality(Type type) {
-        return type.isVarchar() || (type.isArrayType() && ((ArrayType) type).getItemType().isVarchar());
+    static boolean supportLowCardinality(Type type) {
+        return type.isVarchar()
+                || (type.isArrayType() && ((ArrayType) type).getItemType().isVarchar())
+                || type.isStructType();
     }
 
-    private boolean supportAndEnabledLowCardinality(Type type) {
+    private boolean supportAndEnabledLowCardinalityForScanOperator(Type type) {
         if (!supportLowCardinality(type)) {
             return false;
         } else if (type.isArrayType()) {
             return sessionVariable.isEnableArrayLowCardinalityOptimize();
-        } else {
-            return true;
+        } else if (type.isStructType()) {
+            return false;
         }
+        return true;
     }
 
     @TestOnly
@@ -999,8 +1477,19 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
 
         private final ColumnRefSet matchChildren = new ColumnRefSet();
 
-        public DictExpressionCollector(ColumnRefSet allDictColumnRefs) {
+        private final Map<ScalarOperator, Map<String, ColumnRefOperator>> structOpToFieldUseStringRef;
+        private final java.util.function.Function<ScalarOperator, Map<String, ColumnRefOperator>> getFieldsUseStringRef;
+        private final boolean isEnableStructLowCardinalityOptimize;
+
+        public DictExpressionCollector(ColumnRefSet allDictColumnRefs,
+                                       Map<ScalarOperator, Map<String, ColumnRefOperator>> structOpToFieldUseStringRef,
+                                       java.util.function.Function<ScalarOperator, Map<String, ColumnRefOperator>>
+                                               getFieldsUseStringRef,
+                                       boolean isEnableStructLowCardinalityOptimize) {
             this.allDictColumnRefs = allDictColumnRefs;
+            this.structOpToFieldUseStringRef = structOpToFieldUseStringRef;
+            this.getFieldsUseStringRef = getFieldsUseStringRef;
+            this.isEnableStructLowCardinalityOptimize = isEnableStructLowCardinalityOptimize;
         }
 
         public void collect(ScalarOperator scalarOperator) {
@@ -1012,7 +1501,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             if (dictColumn.isColumnRef()) {
                 dictExpressions.computeIfAbsent(((ColumnRefOperator) dictColumn).getId(),
                         x -> Lists.newArrayList()).add(dictExpr);
-            } else if (!dictColumn.isConstant()) {
+            } else if (!dictColumn.isConstant() && !dictColumn.getType().isStructType()) {
                 // array[x], array_min(x)
                 List<ColumnRefOperator> used = dictColumn.getColumnRefs();
                 Preconditions.checkState(used.stream().distinct().count() == 1);
@@ -1041,10 +1530,12 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             if (collectors.stream().allMatch(CONSTANTS::equals)) {
                 return CONSTANTS;
             }
-
+            if (!(scalarOperator instanceof SubfieldOperator)
+                    && collectors.stream().anyMatch(s -> s.getType().isStructType())) {
+                return forbidden(collectors, scalarOperator);
+            }
             long variableExpr = collectors.stream().filter(VARIABLES::equals).count();
-            List<ScalarOperator> dictColumns = collectors.stream().filter(s -> !s.isConstant()).distinct()
-                    .collect(Collectors.toList());
+            List<ScalarOperator> dictColumns = collectors.stream().filter(s -> !s.isConstant()).distinct().toList();
             // only one scalar operator, and it's a dict column
             if (dictColumns.size() == 1 && variableExpr == 0) {
                 return dictColumns.get(0);
@@ -1069,7 +1560,8 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         }
 
         private ScalarOperator merge(List<ScalarOperator> collectors, ScalarOperator scalarOperator) {
-            if (collectors.stream().anyMatch(s -> s.getType().isArrayType())) {
+            if (collectors.stream().anyMatch(s -> s.getType().isArrayType()
+                    || s.getType().isStructType())) {
                 return forbidden(collectors, scalarOperator);
             }
             return mergeWithArray(collectors, scalarOperator);
@@ -1106,16 +1598,43 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             }
 
             if (FunctionSet.ARRAY_MIN.equalsIgnoreCase(call.getFnName()) ||
-                    FunctionSet.ARRAY_MAX.equalsIgnoreCase(call.getFnName())) {
+                    FunctionSet.ARRAY_MAX.equalsIgnoreCase(call.getFnName())
+                    || FunctionSet.ANY_VALUE.equals(call.getFnName())) {
                 // for support: `dictExpr(array_min(array) = 'a')`, not `dictExpr(array_min(array)) = 'a'`
                 ScalarOperator result = mergeWithArray(visitChildren(call, context), call);
                 return !result.isConstant() ? call : result;
             }
 
-            if (LOW_CARD_STRING_FUNCTIONS.contains(call.getFnName()) ||
-                    LOW_CARD_ARRAY_FUNCTIONS.contains(call.getFnName()) ||
+            if (LOW_CARD_ARRAY_FUNCTIONS.contains(call.getFnName()) ||
                     LOW_CARD_AGGREGATE_FUNCTIONS.contains(call.getFnName())) {
                 return mergeWithArray(visitChildren(call, context), call);
+            }
+            if (LOW_CARD_STRING_FUNCTIONS.contains(call.getFnName())) {
+                return merge(visitChildren(call, context), call);
+            }
+            if (isEnableStructLowCardinalityOptimize && LOW_CARD_STRUCT_FUNCTIONS.contains(call.getFnName())
+                    && call.getChildren().stream().allMatch(
+                            c -> (c.isColumnRef() || c.isConstantRef()) && !c.getType().isStructType())) {
+                Map<String, ColumnRefOperator> fieldMap = Maps.newHashMap();
+                List<ScalarOperator> newChildren = visitChildren(call, context);
+                if (newChildren.stream().allMatch(CONSTANTS::equals)) {
+                    return CONSTANTS;
+                }
+                StructType structType = (StructType) call.getType();
+                for (int i = 0; i < newChildren.size(); ++i) {
+                    ScalarOperator newChild = newChildren.get(i);
+                    if (!newChild.isConstant()) {
+                        if (newChild.isColumnRef()) {
+                            int idx = FunctionSet.NAMED_STRUCT.equals(call.getFnName()) ? i / 2 : i;
+                            fieldMap.put(structType.getField(idx).getName(), (ColumnRefOperator) newChild);
+                        }
+                    }
+                }
+                if (!fieldMap.isEmpty()) {
+                    structOpToFieldUseStringRef.put(call, fieldMap);
+                    return call;
+                }
+                return VARIABLES;
             }
             return forbidden(visitChildren(call, context), call);
         }
@@ -1126,17 +1645,39 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             if (supportLowCardinality(collectionElementOp.getChild(0).getType())) {
                 ScalarOperator result = mergeWithArray(children, collectionElementOp);
                 // for support: `dictExpr(array[0] = 'a')`, not `dictExpr(array[0]) = 'a'`
-                return !result.isConstant() ? collectionElementOp : result;
+                if (result.isConstant()) {
+                    return result;
+                } else if (result == collectionElementOp.getChild(0)) {
+                    return collectionElementOp;
+                } else {
+                    return new CollectionElementOperator(collectionElementOp.getType(),
+                            result, collectionElementOp.getChild(1), collectionElementOp.isCheckOutOfBounds());
+                }
 
             }
             return forbidden(children, collectionElementOp);
         }
 
         @Override
-        public ScalarOperator visitBinaryPredicate(BinaryPredicateOperator predicate, Void context) {
-            if (predicate.getBinaryType() == EQ_FOR_NULL) {
-                return forbidden(visitChildren(predicate, context), predicate);
+        public ScalarOperator visitSubfield(SubfieldOperator op, Void context) {
+            ScalarOperator result = mergeWithArray(visitChildren(op, context), op);
+            if (result.isConstant()) {
+                return result;
             }
+            ScalarOperator child = op.getChild(0);
+            Map<String, ColumnRefOperator> fieldsUseStringRef = getFieldsUseStringRef.apply(child);
+            if (op.getFieldNames().size() == 1 && fieldsUseStringRef != null
+                    && fieldsUseStringRef.containsKey(op.getFieldNames().get(0))) {
+                return fieldsUseStringRef.get(op.getFieldNames().get(0));
+            }
+            if (result.isColumnRef()) {
+                saveDictExpr(result, op);
+            }
+            return VARIABLES;
+        }
+
+        @Override
+        public ScalarOperator visitBinaryPredicate(BinaryPredicateOperator predicate, Void context) {
             return merge(visitChildren(predicate, context), predicate);
         }
 
